trying to fix definition

--- a/CCS-FINAL/commanddefs.tex
+++ b/CCS-FINAL/commanddefs.tex
@@ -6,14 +6,14 @@
 \mathchardef\mhyphen="2D
 
 \newcommand{\setup}{\mathsf{Setup}}
-\newcommand{\kgen}{\mathsf{KGen}}
-\newcommand{\sign}{\mathsf{Sign}}
+\newcommand{\kgen}{\mathsf{KG}}
+\newcommand{\sign}{\mathsf{Sig}}
 \newcommand{\aggregate}{\mathsf{Aggregate}}
-\newcommand{\verify}{\mathsf{Vrfy}}
-\newcommand{\wverify}{\mathsf{wVrfy}}
-\newcommand{\sverify}{\mathsf{sVrfy}}
-\newcommand{\iverify}{\mathsf{iVrfy}}
-\newcommand{\averify}{\mathsf{aVrfy}}
+\newcommand{\verify}{\mathsf{Vf}}
+\newcommand{\wverify}{\mathsf{wVf}}
+\newcommand{\sverify}{\mathsf{sVf}}
+\newcommand{\iverify}{\mathsf{iVf}}
+\newcommand{\averify}{\mathsf{aVf}}
 
 \newcommand{\params}{\mathsf{pp}}
 
