--- a/CCS-FINAL/main.tex
+++ b/CCS-FINAL/main.tex
@@ -163,7 +163,7 @@ We provide a full implementation of Chipmunk and provide extensive benchmarks st
 
 
 %% Bibliography
-\bibliographystyle{alpha}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{../cryptobib/abbrev0,../cryptobib/crypto,../extraref}
 %\newpage
 %\section*{Supplementary Material}
