--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -910,7 +910,7 @@ unaggregated commitments, we can actually do better: as in a usual Merkle tree o
                            \hline
  \end{tabular}
  \medskip % Alternatively, put caption on top (some style guides suggest this)
- \caption{\cameraready{bitlength of our HVC construction $\hvccamera$. We denote by $\limbs = \ceil{\log_{2\eta+1}q}$ and $\limbs' = \ceil{\log_{2\eta+1}q'}$ the number of limbs for the decompositions of $\ring_q$ resp.\ $\ring_{q'}$ elements. Note that in the individually verifying case, we do not include the $\vec{p}_j$ here, but only the sibling nodes $\vec{s}_j$.}}
+ \caption{\cameraready{Bitlength of our HVC construction $\hvccamera$. We denote by $\limbs = \ceil{\log_{2\eta+1}q}$ and $\limbs' = \ceil{\log_{2\eta+1}q'}$ the number of limbs for the decompositions of $\ring_q$ resp.\ $\ring_{q'}$ elements. Note that in the individually verifying case, we do not include the $\vec{p}_j$ here, but only the sibling nodes $\vec{s}_j$.}}
  \label{table:hvcsizescamera}
 \end{table}
 \end{remark}
