--- a/CCS-FINAL/sections/multisig.tex
+++ b/CCS-FINAL/sections/multisig.tex
@@ -48,33 +48,44 @@ We, on the other hand, require that any sequence of \emph{individually valid} si
   Let $\msig$ be a synchronized $\rho$-wise multi-signature scheme for $2^\tau$ time periods.
   $\msig$ is unforgeable if for all security parameters $\secpar\in\NN$, and all PPT algorithms $\adv$ it holds that
 \[
-  \Pr\left[\begin{aligned}
-  \params\gets{}&\setup(\secparam);\\
-  (\sk^*,\pk^*)\gets&\kgen(\params);\\
-  (\pubkeys,t,m,\aggsig)\gets{}&\adv^{\sign(\params,\sk^*,\cdot,\cdot)}(\params,\pk^*)
-  \end{aligned}\colon
   \begin{aligned}
-  &\averify(\params,\pubkeys,t,m,\aggsig)=1\\
+  &\Pr\mleft[\begin{aligned}
+  \params\gets{}&\setup(\secparam);\\
+  (\sk^*,\pk^*)\gets{}&\kgen(\params);\\
+  \mleft(
+  \begin{aligned}
+  &\pubkeys,t,\\&m,\aggsig
+  \end{aligned}
+  \mright)\gets{}&\adv^{\sign(\sk^*,\cdot,\cdot)}(\params,\pk^*)
+  \end{aligned}\!\!\colon\!\!\!\!
+  \begin{aligned}
+  &\mleft(\begin{aligned}
+  &\averify(\params,\pubkeys\!,t,m,\aggsig)\\&=1
+  \end{aligned}\mright)\\
   {}\land{}&\pk^*\in\pubkeys\\
-  {}\land{}&\forall\; (t',m',\sigma') \in\queries\ldotp\; (t',m') \neq (t,m)\\
+  {}\land{}&\mleft(\begin{aligned}
+  &\forall\; (t',m',\sigma') \in\queries\ldotp\\&(t',m') \neq (t,m)
+  \end{aligned}\mright)\\
   {}\land{}&\forall\; t' \ldotp\;\abs{\queries_{t'}}\leq 1
-  \end{aligned}\right] \leq \negl\enspace,
+  \end{aligned}\mright]\\
+  &\leq \negl\enspace,
+  \end{aligned}
 \]
 where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries_{t'}$ denotes the set of signing queries made for timeslot $t'$.
 \end{definition}
 
-\begin{figure*}[p]
+\begin{figure*}
 \centering
 \begin{pchstack}[center,boxed]
 \begin{pcvstack}
-  \procedure{$\setup(\secparam)$}{
+  \procedure{$\setup(\secparam)$}{\\[-1.2em]
 %    \delta \coloneqq \lceil\log\tau\rceil\\
     \hotsparams\gets\hots.\setup(\secparam)\\
     \hvcparams\gets\hvc.\setup(\secparam)\\
     \pcreturn \params\coloneqq (\hotsparams,\hvcparams)
   }
   \pcvspace
-  \procedure{$\kgen(\params)$}{
+  \procedure{$\kgen(\params)$}{\\[-1.2em]
 %    \pcparse \params \pcas (\hotsparams,\hvcparams)\\
     \pcforeach 1 \leq i \leq 2^\tau\\
     \quad(\osk^i,\opk^i) \gets \hots.\kgen(\hotsparams)\\
@@ -84,7 +95,14 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
     \pcreturn (\sk,\pk) \coloneqq ((\osks,\opks),\vec{c})
   }
   \pcvspace
-  \procedure{$\aggregate(\params,\pubkeys,t,m,\signatures)$}{
+  \procedure{$\sign(\params,\sk,t,m)$}{\\[-1.2em]
+    \otsig \gets \hots.\sign(\hotsparams,\osk_t,m)\\
+    \vec{d} \gets \hvc.\open(\hvcparams,\vec{c},\opks,t)\\
+    \pcreturn \sigma \coloneqq (\otsig,\vec{d})
+  }
+  \end{pcvstack}
+  \pchspace
+  \procedure{$\aggregate(\params,\pubkeys,t,m,\signatures)$}{\\[-1.2em]
     \pcif \abs{\signatures} \neq \abs{\pubkeys}\\
     \quad \pcreturn \bot\\
     \pcfor (\pk,\sigma) \in \zip(\pubkeys,\signatures)\\
@@ -99,16 +117,9 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
     \pcwhile j < \chi \pcand \averify(\params,\pubkeys,t,m,(\otsig,\vec{d},j))=0\\
     \pcreturn \aggsig \coloneqq (\otsig,\vec{d},j)
   }
-\end{pcvstack}
 \pchspace
 \begin{pcvstack}
-  \procedure{$\sign(\params,\sk,t,m)$}{
-    \otsig \gets \hots.\sign(\hotsparams,\osk_t,m)\\
-    \vec{d} \gets \hvc.\open(\hvcparams,\vec{c},\opks,t)\\
-    \pcreturn \sigma \coloneqq (\otsig,\vec{d})
-  }
-  \pcvspace
-  \procedure{$\iverify(\params,\pk,t,m,\sigma)$}{
+  \procedure{$\iverify(\params,\pk,t,m,\sigma)$}{\\[-1.2em]
     \opk \gets \hvc.\sverify(\hvcparams,\vec{c},t,\vec{d})\\
     \pcif t > 2^\tau \pcor \opk = \bot\\
     \quad \pcreturn 0\\
@@ -116,7 +127,7 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
     \quad \pcreturn \hots.\sverify(\hotsparams,\opk,m,\otsig)
   }
   \pcvspace
-  \procedure{$\averify(\params,\pubkeys,t,m,\aggsig)$}{
+  \procedure{$\averify(\params,\pubkeys,t,m,\aggsig)$}{\\[-1.2em]
     (w^1,\dots,w^{\abs{\pubkeys}}) \coloneqq H(t,m,\pubkeys,j)\\
     \vec{c} \coloneqq \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \vec{c}_i\\
     \opk \gets \hvc.\sverify(\hvcparams,\vec{c},t,\vec{d})\\
@@ -134,67 +145,12 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
 \label{fig:nidvconst}
 \end{figure*}
 %
-\iffalse
-The following lemma will be useful for proving the security of our construction in~\autoref{thm:mainconstruction}, specifically it will be useful during the security reduction to the underlying one-time signature scheme.
-Intuitively, the lemma shows that two valid aggregate signatures that are created using vectors of random weights that differ in one position, allow for extracting a valid one-time signature and key.
-
-\begin{lemma}\label{lem:forkingisuseful}
-  Let $\secparam,\tau,\rho$ be positive integers.
-  Let $\params\gets\setup(\secparam)$ and $(\sk^*,\pk^*=\vec{c}^*) \gets\kgen(\params)$ be fixed.
-  Let $\ell\in[\rho]$, $t\in[2^\tau]$, $m\in\bin^*$, $\pubkeys = (\pk^1,\dots,\pk^{\ell})$ with $\pk^j=\pk^*$, $\aggsig^0=(\otsig^0,\vec{d}^0)$, $\aggsig^1=(\otsig^1,\vec{d}^1)$, and let $H_0,H_1$ be two random oracles, such that 
-  \begin{align*}
-    (w^1,\dots,w^{\ell}) &\coloneqq H_0(t,m,\pubkeys)\\
-    (w^1,\dots,w^{j-1},\hat{w}^j,w^{j+1},\dots,w^{\ell}) &\coloneqq H_1(t,m,\pubkeys)
-  \end{align*}
-  with $w^j\neq \hat{w}^j$ and
-  \[
-    \averify^{H_0}(\params,\pubkeys,t,m,\aggsig^0)=1 \quad \text{and} \quad \averify^{H_1}(\params,\pubkeys,t,m,\aggsig^1)=1.
-  \]
-  Then, for $\opk^*\gets\hvc.\wverify(\hvcparams,(w^j-\hat{w}^j)\cdot \vec{c}^*,t,\vec{d}^0-\vec{d}^1)$ it holds that
-  \[
-    \opk^* \neq \bot \quad \text{and} \quad \hots.\wverify(\hotsparams,\opk^*,m,\otsig^0-\otsig^1) = 1.
-  \]
-\end{lemma}
-
-\begin{proof}
-    Since 
-    \[
-    \averify^{H_0}(\params,\pubkeys,t,m,\aggsig^0)=1 \quad \text{and} \quad \averify^{H_1}(\params,\pubkeys,t,m,\aggsig^1)=1,
-    \]
-    it must hold by definition of the aggregated verification algorithm that 
-    \[
-      \hvc.\sverify(\hvcparams,\smashoperator{\sum_{i\in[\ell]}} w^i\cdot \vec{c}^i,t,\vec{d}^0) = \opk^0 
-    \]
-    and
-    \[   
-      \hvc.\sverify(\hvcparams,\hat{w}^j\cdot \vec{c}^j+\smashoperator{\sum_{i\in[\ell]\setminus\{j\}}} w^i\cdot \vec{c}^i,t,\vec{d}^1)= \opk_1
-    \]
-    for $\opk^0,\opk^1\neq\bot$.
-    Thus by \autoref{def:malhomhvc} it holds that
-    \begin{align*}
-      \opk^* =& \hvc.\wverify(\hvcparams,(w^j-\hat{w}^j)\cdot \vec{c}^*,t,\vec{d}^0-\vec{d}^1)\\
-      =&\hvc.\wverify(\hvcparams,\Bigl(\smashoperator{\sum_{i\in[\ell]}} w^i\cdot \vec{c}^i\Bigr) - \Bigl(\hat{w}^j\cdot \vec{c}^j+\smashoperator{\sum_{i\in[\ell]\setminus\{j\}}} w^i\cdot \vec{c}^i\Bigr),t,\vec{d}^0-\vec{d}^1)\\
-       =& (\opk^0-\opk^1).
-    \end{align*}
-    Further, by definition of the aggregated verification algorithm it must also hold that
-    \[
-      \hots.\sverify(\hotsparams,\opk^0,m,\otsig^0) =1 \quad \text{and} \quad \hots.\sverify(\hotsparams,\opk^1,m,\otsig^1)=1
-    \]
-    Thus, by \autoref{def:malhomhots} it holds that
-    \begin{align*}
-      &\hots.\wverify(\hotsparams,\opk^*,m,\otsig^0-\otsig^1)\\
-      =&\hots.\wverify(\hotsparams,\opk^0-\opk^1,m,\otsig^0-\otsig^1)=1 \tag*{\qed}
-    \end{align*}
-\end{proof}
-\fi
 
 \subsection{Construction}
 For ease of notation we define the function $\zip$ that \enquote{zips} up two vectors into a single vector of pairs, i.e.
-\[
-\zip(\vec{a},\vec{b}) := \begin{pmatrix}(a_1,b_1)\\
-\vdots\\
-(a_\ell,b_\ell) \end{pmatrix}.
-\]
+$
+\zip(\vec{a},\vec{b}) \coloneqq ((a_1,b_1),\allowbreak\dots,\allowbreak(a_\ell,b_\ell))
+$.
 The following theorem now states the security of our construction presented in~\autoref{fig:nidvconst}.
 \begin{theorem}\label{thm:mainconstruction}
 Let $\secpar,n,q',\xi,\chi,\tau$ be positive integers and $0<\errorbound < \tfrac{1}{2}$ with $n$ being a power of two, $q'$ being prime, and $\chi \geq \secpar/\log_2(\frac{1}{2\errorbound})$.
@@ -286,7 +242,7 @@ If both $\hots$ and $\hvc$ are $(\rho,W,\errorbound)$-probabilistically homomorp
   The aggregation attempt fails if either of these conditions is violated.
   Therefore, by a union bound, each individual attempt fails with probability at most $2\errorbound$.
   Since each attempt is an independent Bernoulli trial the probability of overall failure of all $\chi\geq \secpar/\log_2(\tfrac{1}{2\errorbound})$ attempts can be bounded by $(2\errorbound)^{\chi} \leq 2^{-\secpar}$.
-  Hence, aggregation will succeed with overwhelming probability.\qed
+  Hence, aggregation will succeed with overwhelming probability.
 \end{proof}
 
 \begin{lemma}\label{lem:msigunf}
@@ -307,310 +263,3 @@ If $\hots$ is $W'$-multi-user existentially unforgeable under rerandomized keys 
   As such, we omit the proof here and refer the interested reader to the full version of the original Squirrel paper~\cite{EPRINT:FleSimZha22}.
   We stress that the proof of unforgeability in \cite{EPRINT:FleSimZha22} relies on a variant \cite{CCS:BelNev06} of the forking lemma \cite{EC:PoiSte96}, which uses a rewinding strategy that does not apply to quantum algorithms.
 \end{proof}
-
-%%% OLD PROOF WITH FORKING LEMMA FROM SQURREL
-
-\iffalse
-  Let $\adv$ be an arbitrary PPT algorithm that makes at most $p=\poly$ queries to the random oracle and which breaks unforgeability with probability $\nu(\secpar)$
-  If $\adv$ outputs a forgery $(\pubkeys^*,t^*,m^*,\aggsig^*=(\otsig,\vec{d}^*,j^*))$, we assume without loss of generality that $\adv$ always queries $(\pubkeys^*,t^*,m^*,j^*)$ to the random oracle.
-  
-%  Let $\IG$ be the algorithm that
-\begin{figure}\centering
-\begin{pchstack}[boxed,center]
-  \begin{pcvstack}
-  \procedure{$\IG(\secparam)$}{
-    \params\gets \setup(\secparam,\rho,\tau)\\
-    (\sk^*,c^*)\gets\kgen(\params)\\
-    \pcreturn ((\params,\pk^*),(\params,\sk^*))
-  }
-  \pcvspace
-  \procedure{$H(t,m,\pubkeys,j)$}{
-    \pcif ((t,m,\pubkeys,j),\vec{w}) \in \Hlist\\
-    \quad \pcreturn \vec{w}\\
-    \pcparse \pubkeys \pcas (c_0,\dots,c_{\ell-1})\\
-    \vec{w} \coloneqq (h_{i\rho+1},\dots,h_{i\rho+\ell})\\
-    \pcfor j \in [\ell]\\
-    \quad \pcif \vec{c}_j = \pk^*\\
-    \quad\quad \vec{w} \coloneqq \biggl(\begin{aligned}w^{0},\dots,w^{j-1},w^{\ell-1},\pclb w^{j+1},\dots,w^{\ell-2},w^{j}\end{aligned}\biggr)\\
-    i \coloneqq i+1\\
-    \Hlist \coloneqq \Hlist \cup ((t,m,\pubkeys,j),\vec{w})\\
-    \pcreturn \vec{w}
-  }
-  \end{pcvstack}
-  \pchspace
-  \procedure{$\bdv^{\sign(\params,\sk^*,\cdot,\cdot)}(\params,c^*,h_1,\dots,h_{p\rho})$}{
-    i \coloneqq 0\\
-    \Hlist \coloneqq \emptyset\\
-    (\pubkeys^*,t^*,m^*,\aggsig^*) \gets \adv^{\sign(\params,\sk^*,\cdot,\cdot),H(\cdot,\cdot,\cdot)}(\params,\pk^*)\\
-    \pcif \averify^{H(\cdot,\cdot,\cdot)}(\params,\pubkeys^*,t^*,m^*,\aggsig^*) = 0\\
-    \quad \pcreturn (0,0,\bot)\\
-    \pcif \pk^*\not\in\pubkeys^*\pcor \exists\, \sigma\ldotp\ (t^*,m^*,\sigma)\in\queries\\
-    \quad \pcreturn (0,0,\bot)\\
-    \pcfor t' \in [2^\tau]\\
-    \quad\pcif \abs{\queries_{t'}}> 1\\
-    \quad\quad \pcreturn (0,0,\bot)\\
-    \pcfor k \in [i]\\
-    \quad ((t_k,m_k,\pubkeys_k,j_k),\vec{w}_k) = \Hlist_k\\
-    \quad \pcif (t_k,m_k,\pubkeys_k,j_k) = (t^*,m^*,\pubkeys^*,j^*)\\
-    \quad\quad \pcreturn \biggl(1,j \rho+\abs{\pubkeys^*},\biggl(\begin{aligned}\pubkeys^*,t^*,m^*,\pclb\aggsig^*,\vec{w}_j\end{aligned}\biggr)\biggr)\\
-    \pcreturn (0,0,\bot)
-  }
-\end{pchstack}
-\caption{The setup for the forking lemma based on attacker $\adv$.}
-\label{fig:fork}
-\end{figure}
-\begin{claim}\label{claim:bisasgoodasa}
-  Let $\IG$ and $\bdv$ be as defined in \autoref{fig:fork}. Then it holds that
-  \[\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ h_1,\dots,h_{p}\gets W;\\ (b,i,%(\pubkeys,t,m,\aggsig,\vec{w})
-  \omega) \gets \bdv^{\sign(\params,)}(x,h_1,\dots,h_{p})\end{aligned} : b = 1\right] = \errorbound(\secpar).\]
-\end{claim}
-\begin{proof}
-  The input generation algorithm $\IG$ performs exactly the same setup expected by $\adv$ and then $\bdv$ simply executes $\adv$, perfectly simulating the random oracle by lazy sampling. The only interesting part of the simulation is the fact that $\bdv$ reorders the used randomness if a query includes the challenge public key $\pk^*$.
-  This is necessary to later make use of \autoref{lem:moregeneralforking} without modification, but does not impact the simulation at all: the random values $h_0$ through $h_{p\cdot\rho}$ are all distributed independently and the swapping takes place independently of their values. Therefore the distribution of the random oracle answers is identical with or without swapping.
-  After executing $\adv$, the algorithm $\bdv$ checks whether $\adv$ would have been successful according to \autoref{def:multisigunforge} and outputs $b=1$ iff $\adv$ was successful. Therefore, the claim follows. \qed
-\end{proof}
-  
-  By combining \autoref{claim:bisasgoodasa} with \autoref{lem:moregeneralforking} we can conclude that
-  \begin{equation}
-    \errorbound \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ (b,\omega^0,\omega^1)\gets \fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]}.\label{eq:forkingresult}
-  \end{equation}
-  It remains to bound the probability
-  \[
-    \Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ (b,\omega^0,\omega^1)\gets \fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]
-  \]
-  
-  For any output $(1,(\pubkeys^0,t^0,m^0,(\sigma^0,d^0),\vec{w}^0),(\pubkeys^1,t^1,m^1,(\sigma^1,d^1),\vec{w}^1))$ of the forking algorithm it holds by definition of $\bdv$ and $\fork_\bdv$ that $(\pubkeys^0,t^0,m^0)=(\pubkeys^1,t^1,m^1)$ because these are inputs to the random oracle \emph{before} the fork occurs.
-  To improve readability we thus introduce a modified forking algorithm $\widetilde\fork_\bdv$ defined in \autoref{fig:modfork}.
-  \begin{figure}[tb]
-  \centering
-  \fbox{
-  \procedure{$\widetilde\fork_\bdv^{\sign(\params,\sk^*)}(\params,\pk^*)$}{
-    (b,(\pubkeys^0,t^0,m^0,\aggsig^0,\vec{w}^0),(\pubkeys^1,t^1,m^1,\aggsig^1,\vec{w}^1)) \gets \fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\\
-    \pcreturn (b,\pubkeys^0,t^0,m^0,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)
-  }
-  }
-  \caption{The modified forking algorithm.}\label{fig:modfork}
-  \end{figure}
-  Obviously, it holds that
-  \begin{align}
-%    \begin{aligned}
-    &\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ (b,\omega^0,\omega^1)\gets \fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]\nonumber\\
-    =&\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets& \IG(\secparam);\\ (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets& \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]\label{eq:forkprob}
-%    \end{aligned}
-  \end{align}
-  Let $(b,\pubkeys,t,m,(\sigma^0,d^0),\vec{w}^0,(\sigma^1,d^1),\vec{w}^1) \gets \widetilde\fork_\bdv^{\sign(\params,\sk^*,\cdot,\cdot)}(\params,\pk^*)$ be an execution of the modified forking algorithm with \[\pk^* = c^*\quad\text{and}\quad\sk^* = ((\osk^*_0,\dots,\osk^*_{2^\tau-1}),(\opk^*_0,\dots,\opk^*_{2^\tau-1})).\]
-  %  We define $(\pubkeys,t,m) = (\pubkeys^0,t^0,m^0)=(\pubkeys^1,t^1,m^1)$.
-  Let $j$ denote the index, such that $\pubkeys_j=\pk^*$.
-  We then define \[\widetilde w \coloneqq (w^0_j - w^1_j)\quad\text{and}\quad
-%  \[
-%    \widetilde c \coloneqq %\sum_{i=0}^{\ell-1} w^0_i\cdot c_i - \sum_{i=0}^{\ell-1} w^1_i\cdot c_i = 
-%    c_j \cdot (w^0_j - w^1_j) 
-%  \]
-%  
-    \widetilde\opk \coloneqq  \hvc.\wverify(\params_\hvc,\widetilde w\cdot c^* ,t,(d^0-d^1)).
-  \]
-  The probability from \autoref{eq:forkprob} can then be split as
-  \begin{equation}
-  \begin{aligned}
-    &\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets& \IG(\secparam);\\ (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets& \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]\\
-    =&\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets& \IG(\secparam);\\ (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets& \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : \begin{aligned} &\widetilde\opk = \widetilde w \cdot \opk^*_{t} \\ \land& b=1\end{aligned}\right]\\%\cdot\Pr[\widetilde\opk = \opk^*_{t^0}(w^0_j-w^1_j)]\\
-    &+\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets& \IG(\secparam);\\ (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets& \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} :\begin{aligned} &\widetilde\opk \neq \widetilde w \cdot \opk^*_{t} \\ \land& b=1\end{aligned}\right]%\cdot\Pr[\widetilde\opk \neq \opk^*_{t^0}(w^0_j-w^1_j)].
-  \end{aligned}
-  \end{equation}
-  and we can bound the two parts separately.
-  
-  Consider $\rdv_0$ described in \autoref{fig:redhvc} as an adversary against the position binding of $\hvc$.
-  \begin{figure}\centering\fbox{
-  \procedure{$\rdv_0(\hvcparams,\tau)$}{
-    \hotsparams\gets\hots.\setup(\secparam)\\
-    \params \coloneqq (\hotsparams,\hvcparams,\tau)\\
-    ((\osks^*,\opks^*),c^*) \gets \kgen(\params)\\
-    (b,\pubkeys,t,m,{\aggsig}_0,\vec{w}_0,{\aggsig}_1,\vec{w}_1)\gets\widetilde\fork_\bdv^{\sign(\params,(\osks^*,\opks^*),\cdot,\cdot)}(\params,c^*)\\
-    \pcif b=1\\
-    \quad\pcparse \pubkeys \pcas (\vec{c}^0,\dots,\vec{c}^\ell)\\
-    \quad\pcparse {\aggsig}_0 \pcas (\vec{\sigma}_0, \vec{d}_0)\\
-    \quad\pcparse {\aggsig}_1 \pcas (\vec{\sigma}_1, \vec{d}_1)\\
-    \quad\pcfor j\in[\ell]\\
-    \quad\quad \pcif c^j = c^*\\
-    \quad\quad\quad \pcreturn (\widetilde w\cdot c^*,t,\widetilde w\cdot \open(\hvcparams,c^*,\opks^*,t),(d^0-d^1))\\
-    \pcreturn \bot
-  }}
-  \caption{A reduction that uses the forking algorithm $\widetilde\fork_\bdv$ to attack the position binding of $\hvc$.}\label{fig:redhvc}
-  \end{figure}
-  To analyse the success probability of $\rdv_0$, consider an execution $(c,t,d_0,d_1)\gets\rdv_0(\hvcparams,\tau)$.
-  According to the definitions above, it holds that
-  \begin{align*}
-    & \hvc.\wverify(\hvcparams,c,t,d_0)\\
-%    =& \hvc.\wverify(\hvcparams,\widetilde w\cdot c^*,t^0,\widetilde w\cdot\open(\hvcparams,c,\opks^*,t))\\
-    =& \hvc.\wverify(\hvcparams,w^j_0\cdot c^* - w^j_1\cdot c^*,t,w^j_0\cdot\open(\hvcparams,c,\opks^*,t) - w^j_0\cdot\open(\hvcparams,c,\opks^*,t))\\
-    =& \hvc.\sverify(\hvcparams,w^j_0\cdot c^*,t^0,w^j_0\cdot\open(\hvcparams,c,\opks^*,t))\\ &- \hvc.\sverify(\hvcparams,w^j_1\cdot c^*,t^0,w^j_1\cdot\open(\hvcparams,c,\opks^*,t))
-    \tag{Robust Homomorphism}\\
-    =& w^j_0\cdot \opk^*_t - w^j_1\cdot \opk^*_t = \widetilde w\cdot \opk^*_t \tag{Homomorphic correctness}
-  \end{align*}
-  and
-  \[
-    \hvc.\wverify(\hvcparams,c,t,d_1) = \hvc.\wverify(\hvcparams,\widetilde w\cdot c^*,t,(d^0-d^1)) = \widetilde\opk
-  \]
-  We then have that
-    \begin{align}
-    &\Pr\left[
-      \begin{aligned}
-      \hvcparams\gets&\mspace{\medmuskip}\hvc.\setup(\secparam,\tau);\\
-      (c,t,d_0,d_1) \gets&\mspace{\medmuskip} \rdv_0(\params);\\
-      m_0 \gets&\mspace{\medmuskip} \hvc.\wverify(\params,c,t,d_0);\\
-      m_1 \gets&\mspace{\medmuskip} \hvc.\wverify(\params,c,t,d_1)
-      \end{aligned}:
-      m_0\neq m_1 \land\bot\not\in\{m_0,m_1\}
-    \right]\notag\\
-    =&\Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-      (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*);\\
-      m_0 \coloneqq \widetilde w\cdot \opk^*_t;
-      m_1 \coloneqq \widetilde\opk
-      \end{aligned}:
-      \begin{aligned}
-      &m_0\neq m_1\\ \land&\bot\not\in\{m_0,m_1\}
-      \end{aligned}
-    \right]\label{eq:redhvcsimcorrect}\\
-    =&\Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-      (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)
-      \end{aligned}:
-      \widetilde\opk \neq \widetilde w\cdot \opk^*_t \land \widetilde\opk \neq \bot
-    \right]\label{eq:redhvcm0notbot}\\
-    \geq&\Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-      (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)
-      \end{aligned}:
-      \widetilde\opk \neq \widetilde w\cdot \opk^*_t \land b=1
-    \right]\label{eq:redhvc}
-  \end{align}
-  where \autoref{eq:redhvcsimcorrect} follows because the inputs $\rdv_0$ provides to the forking algorithm are distributed identically to those sampled by $\IG$.
-  \autoref{eq:redhvcm0notbot} follows because by the above observation $(w^j_0-w^j_1)\cdot\opk^*_t$ cannot be $\bot$.
-  Finally \autoref{eq:redhvc} follows from \autoref{lem:forkingisuseful} and the fact that the forking algorithm only outputs $b=1$ if both multi-signatures verify.
-  
-  Since the homomorphic vector commitment is assumed to be position binding, it thus follows that
-  \begin{equation}
-    \negl \geq \Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets& \IG(\secparam);\\ (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets& \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} :\begin{aligned} &\widetilde\opk \neq \widetilde w \cdot \opk^*_{t} \\ \land& b=1\end{aligned}\right]\label{opkstardifferentisnegl}
-  \end{equation}
-  
-  Consider now $\rdv_1$ described in \autoref{fig:redhots} as an adversary against the existential unforgeability under rerandomized keys of $\hots$.
-  \begin{figure}\centering
-%  \begin{pchstack}[boxed]
-  \fbox{\procedure{$\rdv_1(\hotsparams,\opk_0,\dots\opk_{2^\tau-1})$}{
-    \hvcparams\gets\hvc.\setup(\secparam)\\
-    \params \coloneqq (\hotsparams,\hvcparams,\tau)\\
-    \opks^* \coloneqq (\opk_0,\dots,\opk_{2^\tau-1})\\
-    c^* \gets \hvc.\commit(\hvcparams,\opks^*)\\
-%    e \coloneqq 0\\
-    (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets\widetilde\fork_\bdv^{\widetilde{\sign}(\cdot,\cdot)}(\params,c^*)\\
-    \pcif b=1\\
-    \quad\pcparse \pubkeys \pcas (c_0,\dots,c_\ell)\\
-    \quad\pcparse \aggsig^0 \pcas (\sigma^0, d^0)\\
-    \quad\pcparse \aggsig^1 \pcas (\sigma^1, d^1)\\
-    \quad\pcfor j\in[\ell-1]\\
-    \quad\quad \pcif c_j = c^*\\
-    \quad\quad\quad \pcreturn (t,m,(\sigma^0-\sigma^1),w^0_j-w^1_j)\\
-    \pcreturn \bot
-  }}
-%  \pchspace
-%  \procedure{$\widetilde{\sign}(t,m)$}{
-%    \pcif t = t^*\\
-%%    \quad \pcif e=0\\
-%    \quad \pcoutput m \pcand\pcreceive \otsig\\
-%%    \quad\quad e \coloneqq 1\\
-%%    \quad \pcelse\\
-%%    \quad \quad \pcabort\pcand\pcreturn\bot\\
-%    \pcelse\\
-%    \quad\otsig \gets \hots.\sign(\hotsparams,\osk_t,m)\\
-%%    \otsig \gets \hots.\sign(\hotsparams,\osk_t,m)\\
-%    d \gets \hvc.\open(\hvcparams,c^*,\opks^*,t)\\
-%    \pcreturn (\otsig,d)
-%  }
-%  \end{pchstack}
-  \caption{A reduction that uses the forking algorithm $\widetilde\fork_\bdv$ to attack the multi-user existential unforgeability under rerandomized keys of $\hots$.}\label{fig:redhots}
-  \end{figure}
-  We analyze the success probability of $\rdv_1$ by observing that
-  \begin{align}
-    &\Pr\left[
-      \begin{aligned}
-      \hotsparams \gets \hots.\setup(\secparam);\\
-      \forall i \in [T-1]\ldotp (\osk_i,\opk_i) \gets \hots.\kgen(\params);\\
-      (i^*,m^*,\sigma^*,\widetilde w) \gets \rdv_1^{\widetilde\sign(\cdot,\cdot)}(\hotsparams,\params,\opks);\\
-      \end{aligned}:
-      \begin{aligned}
-      \hots.\wverify(\params,\widetilde\cdot\opk_{i^*},m^*,\sigma^*) = 1\\
-      \land m^* \not\in Q_{i^*} \land \widetilde w\in W'
-      \end{aligned}
-    \right]
-    \\
-%    =&\Pr\left[
-%      \begin{aligned}
-%      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-%      (\osk,\opk) \gets\mspace{\medmuskip} \kgen(\params);\\
-%      m \gets\mspace{\medmuskip} \rdv_1(\params,\opk);\\
-%      \sigma \gets\mspace{\medmuskip} \sign(\params,\osk,m);\\
-%      (m^*,\sigma^*,w^*) \gets\mspace{\medmuskip} \rdv_1(\sigma)\\
-%      \end{aligned}:\begin{aligned}
-%      \hots.\wverify(\params,w^*\cdot\opk,m^*,\sigma^*) = 1\\
-%      \land m^* \neq m \land \norm{w^*}\in \tern_\alpha
-%      \end{aligned}
-%    \right]\\
-    \geq&\Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-%      t^* \gets [2^\tau-1]\\
-      \left(\begin{aligned}b,\pubkeys,t,m,\\\aggsig^0,\vec{w}^0,\\\aggsig^1,\vec{w}^1\end{aligned}\right)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\\
-      \end{aligned}:
-      \begin{aligned}
-        \hots.\wverify(\params,\widetilde w\cdot\opk_{t},m,\sigma^0-\sigma^1) = 1\label{eq:succifdiffverandguesscorr}\\
-        \land (\nexists \sigma'\ldotp (m,t,\sigma') \in Q)
-      \end{aligned}
-    \right]\\
-    \geq&\Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-      \left(\begin{aligned}b,\pubkeys,t,m,\\\aggsig^0,\vec{w}^0,\\\aggsig^1,\vec{w}^1\end{aligned}\right)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\\
-      \end{aligned}:
-      \begin{aligned}
-        \widetilde \opk = \widetilde w\cdot\opk_{t}\\
-        \land \hots.\wverify(\params,\widetilde \opk,m,\sigma^0-\sigma^1) = 1\\
-        \land (\nexists \sigma'\ldotp (m,t,\sigma') \in Q)
-      \end{aligned}
-    \right]\label{eq:guessindependent}\\
-    \geq&\Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-      \left(\begin{aligned}b,\pubkeys,t,m,\\\aggsig^0,\vec{w}^0,\\\aggsig^1,\vec{w}^1\end{aligned}\right)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\\
-      \end{aligned}:
-      \begin{aligned}
-        \widetilde \opk = \widetilde w\cdot\opk_{t^*}\\
-        \land b=1
-      \end{aligned}
-    \right].\label{eq:usethatforkingworks}
-  \end{align}
-  Here \autoref{eq:succifdiffverandguesscorr} follows by observing that the inputs $\rdv_1$ provides to the forking algorithm are distributed identically to those sampled by $\IG$ and $\rdv_1$ is successful whenever the difference of the two signatures verifies.
- Finally, \autoref{eq:usethatforkingworks} follows from \autoref{lem:forkingisuseful} and the fact that the forking algorithm only outputs $b=1$ if both multi-signatures verify.
-  
-Since $\hots$ is assumed to be multi-user existentially unforgeable under rerandomized keys, it thus follows that
-  \begin{equation}
-    \negl \geq \Pr\left[
-      \begin{aligned}
-      ((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\
-      \left(\begin{aligned}b,\pubkeys,t,m,\\\aggsig^0,\vec{w}^0,\\\aggsig^1,\vec{w}^1\end{aligned}\right)\gets \widetilde\fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\\
-      \end{aligned}:
-      \begin{aligned}
-        \widetilde \opk = \widetilde w\cdot\opk_{t^*}\\
-        \land b=1
-      \end{aligned}
-    \right]\label{opkstarsameisnegl}
-  \end{equation}
-  Combining Equations~\ref{opkstardifferentisnegl} and \ref{opkstarsameisnegl} with \autoref{eq:forkingresult} we can conclude that
-  \[
-    \errorbound \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\negl}
-  \]
-  which implies that $\errorbound$ is negligible and concludes the proof.\qed
-  \fi
