--- a/CCS-FINAL/sections/onetimesig.tex
+++ b/CCS-FINAL/sections/onetimesig.tex
@@ -29,7 +29,7 @@ The construction presented in this section is a modification of the construction
 Note that for us, we will always have $\ring = \ZZ[X]/\langle X^n+1\rangle$ for $n$ a power of two and $\modsig = \ring_{q'}^\siglen$, $\modopk = \ring_{q'}^\opklen$ for some prime $q'$.
 
 \begin{definition}[Individual Correctness]
-Let $\hots$ be a key-homorphic one-time signature scheme.
+Let $\hots$ be a key-{}homo\-morphic one-time signature scheme.
 $\hots$ is individually correct, if for all security parameters $\secpar\in\NN$, parameters $\params \gets \setup(\secparam)$, key pairs $(\osk,\opk) \gets \kgen(\params)$, messages $m\in\bin^*$, and signatures $\vec{\sigma} \gets \sign(\params,\osk,m)$ it holds that
 \[
   \iverify(\params,\opk,m,\sigma)=1\enspace.
@@ -59,15 +59,15 @@ For any two, even maliciously generated, signatures that \emph{strongly} verify 
 
 \begin{definition}[Robust Homomorphism]
   \label{def:malhomhots}
-  Let $\hots$ be a key-homomorphic one-time signature scheme over a ring $\ring$ with public key space $\modopk$ and signatures from $\modsig$.
+  Let $\hots$ be a key-{}homo\-morphic one-time signature scheme over a ring $\ring$ with public key space $\modopk$ and signatures from $\modsig$.
   $\hots$ is robustly homomorphic if for all security parameters $\secpar\in\NN$, public parameters $\params\gets\setup(\secparam)$, messages $m\in\bin^*$, (possibly malformed) public keys $\opk^0,\opk^1 \in \modopk$, and (possibly malformed) signatures $\vec{\sigma}^0,\vec{\sigma}^1\in\modsig$ with
   \[
     \sverify(\params,\opk^0, m,\vec{\sigma}^0)=1 \quad \text{and} \quad \sverify(\params,\opk^1, m,\vec{\sigma}^1)=1
   \]
   it holds that
-  \[
+  $
     \wverify(\params,\opk^0-\opk^1, m,(\vec{\sigma}^0-\vec{\sigma}^1))=1.
-  \]
+  $
 \end{definition}
 
 The following definition of a multi-user version of (one-time) existential unforgeability under rerandomized keys is taken directly from \cite{CCS:FleSimZha22}.
@@ -82,13 +82,13 @@ The following definition of a multi-user version of (one-time) existential unfor
       \forall i \!\in\! [T]\ldotp (\osk_i,\opk_i) \gets \kgen(\params);\\
       \mleft(
       \begin{aligned}
-      &i^*\!\!,m^*\!\!,\\&\sigma^*\!\!,w^*
+      &i^*\!,m^*\!,\\&\sigma^*\!,w^*
       \end{aligned}
       \mright) 
       \gets \adv^{\widetilde\sign(\cdot,\cdot)}(\params,\vec{\opk})\\
 %      \sigma \gets \sign(\params,\osk,m);\\
 %      (m^*,\sigma^*,w_0^*,w_1^*) \gets \adv(\sigma)\\
-      \end{aligned}\!\colon\!
+      \end{aligned}\!\colon\!\!
       \begin{aligned}
       &\wverify(\params,w^{*\!}\opk_{i^*},m^*\!\!,\sigma^*) = 1\\
       &\land m^*\not\in Q_{i^*} \land \abs{Q_{i^*}}\leq 1\\
@@ -105,12 +105,12 @@ The following definition of a multi-user version of (one-time) existential unfor
 \centering
 \begin{pcvstack}[center,boxed]
 \begin{pchstack}[center]
-  \procedure{$\setup(\secparam)$}{
+  \procedure{$\setup(\secparam)$}{\\[-1.2em]
     \vec{a} \gets \ring_{q'}^\otspkkeylen\\
     \pcreturn \vec{a}
   }
   \pchspace
-  \procedure{$\kgen(\params)$}{
+  \procedure{$\kgen(\params)$}{\\[-1.2em]
     \vec{s}_0 \gets \ball{\varphi}{q'}^\otspkkeylen\\
     \vec{s}_1 \gets \ball{\varphi\cdot\alpha_H}{q'}^{\otspkkeylen}\\
     v_0 := \vec{a}^\transpose\cdot \vec{s}_0\\
@@ -118,7 +118,7 @@ The following definition of a multi-user version of (one-time) existential unfor
     \pcreturn ((\vec{s}_0,\vec{s}_1),(v_0,v_1))
   }
   \pchspace
-  \procedure{$\sign(\params,\osk,m)$}{
+  \procedure{$\sign(\params,\osk,m)$}{\\[-1.2em]
     \pcparse \osk \pcas (\vec{s}_0,\vec{s}_1)\\
     \vec{\sigma} := \vec{s}_0\cdot H(m)+\vec{s}_1\\
     \pcreturn \vec{\sigma}
@@ -127,20 +127,20 @@ The following definition of a multi-user version of (one-time) existential unfor
   \pchspace
   \begin{pchstack}
   \begin{pcvstack}
-  \procedure{$\iverify(\params,\opk,m,\vec{\sigma})$}{
+  \procedure{$\iverify(\params,\opk,m,\vec{\sigma})$}{\\[-1.2em]
     \pcreturn \verify(\params,\opk,m,\vec{\sigma},2\varphi\alpha_H)
   }
   \pcvspace
-  \procedure{$\sverify(\params,\opk,m,\vec{\sigma})$}{
+  \procedure{$\sverify(\params,\opk,m,\vec{\sigma})$}{\\[-1.2em]
     \pcreturn \verify(\params,\opk,m,\vec{\sigma},\beta_\sigma)
   }
   \pcvspace
-  \procedure{$\wverify(\params,\opk,m,\vec{\sigma})$}{
+  \procedure{$\wverify(\params,\opk,m,\vec{\sigma})$}{\\[-1.2em]
     \pcreturn \verify(\params,\opk,m,\vec{\sigma},2\beta_\sigma)
   }
   \end{pcvstack}
   \pchspace
-  \procedure{$\verify(\params,\opk,m,\vec{\sigma},\beta')$}{
+  \procedure{$\verify(\params,\opk,m,\vec{\sigma},\beta')$}{\\[-1.2em]
     \pcparse \opk \pcas (v_0,v_1)\\
     \pcif \norm{\vec{\sigma}} > \beta'\\
     \quad \pcreturn 0\\
@@ -291,7 +291,7 @@ It thus follows that with probability at least $1-\errorbound$ the strong verifi
 \end{lemma}
 
 \begin{proof}
-  Let $\params\gets\setup(\secparam)$, let $m\in\bin^*$, let $\opk^0=(v^0_0,v^0_1),\opk^1=(v^1_0,v^1_1)\in \ring^2_q$, and let $\vec{\sigma}^0,\vec{\sigma}^1 \in \ring_{q'}^\otspkkeylen$ be arbitrary such that both $\sverify(\params,\opk^0,m,\vec{\sigma}^0)=1$ and $\sverify(\params,\opk^1,m,\vec{\sigma}^1)=1$.
+  Let $\params\gets\setup(\secparam)$, let $m\in\bin^*$, let $\opk^0=(v^0_0,v^0_1),\allowbreak\opk^1=(v^1_0,v^1_1)\in \ring^2_q$, and let $\vec{\sigma}^0,\vec{\sigma}^1 \in \ring_{q'}^\otspkkeylen$ be arbitrary such that both $\sverify(\params,\opk^0,m,\vec{\sigma}^0)=1$ and $\sverify(\params,\opk^1,m,\vec{\sigma}^1)=1$.
   
   By the definition of the strong verification algorithm, it holds that
   \begin{equation*}
@@ -345,9 +345,9 @@ It thus follows that with probability at least $1-\errorbound$ the strong verifi
   Further, since $w^*\in W'$ there exist $w_0,w_1 \in \tern_{\alpha_w}$ such that $w^* = w_0-w_1$ and $\norm{w^*}_1 \leq \norm{w_0}_1 + \norm{w_1}_1 = 2\alpha_w$.
   We can thus, using the definition of $\sign$, the triangle inequality, and \autoref{lem:ternbound}, bound the norm of $\vec{\sigma}'$ as
   \begin{align*}
-    \norm{\vec{\sigma}'} ={}& \norm{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1}\\
-    ={}&\norm{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)}+ \norm{w^*\cdot\vec{s}^{i^*}_1}\\
-    ={}&\norm{w^*}_1\cdot\norm{H(m^*)}_1\cdot\norm{\vec{s}^{i^*}_0} + \norm{w^*}_1\cdot\norm{\vec{s}^{i^*}_1}\\
+    \lVert{\vec{\sigma}'}\rVert ={}& \lVert{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1}\rVert\\
+    ={}&\lVert{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)}\rVert+ \lVert{w^*\cdot\vec{s}^{i^*}_1}\rVert\\
+    ={}&\lVert{w^*}\rVert_1\cdot\lVert{H(m^*)}\rVert_1\cdot\lVert{\vec{s}^{i^*}_0}\rVert + \lVert{w^*}\rVert_1\cdot\lVert{\vec{s}^{i^*}_1}\rVert\\
     ={}&4\alpha_w\alpha_H\varphi\enspace.\tag{$w^*\in W'$ and $H(m^*)\in\tern_{\alpha_H}$}
   \end{align*}
   It follows that $\norm{\vec{\sigma}^*-\vec{\sigma}'} \leq \norm{\vec{\sigma}^*}+\norm{\vec{\sigma}'} \leq 2\beta_\sigma + 4\alpha_w\alpha_H\varphi$ as required.
@@ -356,8 +356,8 @@ It thus follows that with probability at least $1-\errorbound$ the strong verifi
   This is the case iff $\vec{\sigma}^* \neq \vec{\sigma}'$.
   It thus suffices to bound the probability, that $\vec{\sigma}^*=\vec{\sigma}'$.
 
-  To this end, we observe by \autoref{lem:keyhidden} that, since $\adv$ has learned at most a single signature under $(v_0^{i^*},v_1^{i^*})$, the corresponding $(\vec{s}_0^{i^*},\vec{s}_1^{i^*})$ remains information-theoretically hidden from $\adv$ among at least 2 possible secret keys.
-  Once $\adv$ outputs a valid forgery $(i^*,m^*,\vec{\sigma}^*,w^*)$ the signing key used for the forgery becomes uniquely determined by \autoref{lem:nilssupportivechildsupport} as long as $H(m^*)\neq H(m)$ which is guaranteed with overwhelming probability by the collision resistance of $H$.
+  To this end, we observe by \autoref{lem:keyhidden} that, since $\adv$ has learned at most a single signature under $(v_0^{i^*},v_1^{i^*})$, the corresponding $(\vec{s}_0^{i^*},\allowbreak\vec{s}_1^{i^*})$ remains information-theoretically hidden from $\adv$ among at least 2 possible secret keys.
+  Once $\adv$ outputs a valid forgery $(i^*,m^*,\allowbreak\vec{\sigma}^*,w^*)$ the signing key used for the forgery becomes uniquely determined by \autoref{lem:nilssupportivechildsupport} as long as $H(m^*)\neq H(m)$ which is guaranteed with overwhelming probability by the collision resistance of $H$.
   It follows that $\sigma^* \neq \sigma'$ with probability at least $1/2 - \negl$.
   Therefore, the success probability of our reduction $\sisadvkots$ is $(1/2 - \negl) \nu(\secpar)$ and since the SIS problem is assumed to be hard, $\nu(\secpar)$ must therefore be negligible in $\secpar$.
 \end{proof}
@@ -368,7 +368,7 @@ It thus follows that with probability at least $1-\errorbound$ the strong verifi
   for every $c\in \tern_{\alpha_H}$ there exists $(\vec{s}'_0,\vec{s}'_1)\in \ball{\varphi}{q'}^\otspkkeylen \times \ball{\varphi\alpha_H}{q'}^\otspkkeylen$such that $(\vec{s}'_0,\vec{s}'_1)\neq(\vec{s}_0,\vec{s}_1)$, $(\vec{a}^\transpose\cdot\vec{s}'_0,\vec{a}^\transpose\cdot\vec{s}'_1) = (\vec{a}^\transpose\cdot\vec{s}_0,\vec{a}^\transpose\cdot\vec{s}_1)$ and $\vec{s}'_0\cdot c + \vec{s}'_1 = \vec{s}_0\cdot c + \vec{s}_1$.
 \end{lemma}
 \begin{proof}
-  We define a function $f_{\vec{a}, c}$ that maps any secret key $(\vec{s}_0, \vec{s}_1)$ to a pair of public key and signature defined as $((\vec{a}^\transpose\cdot\vec{s}_0,\vec{a}^\transpose\cdot\vec{s}_1), \vec{s}_0\cdot c + \vec{s}_1)$.
+  We define a function $f_{\vec{a}, c}$ that maps any secret key $(\vec{s}_0,\allowbreak \vec{s}_1)$ to a pair of public key and signature defined as $((\vec{a}^\transpose\cdot\vec{s}_0,\vec{a}^\transpose\cdot\vec{s}_1), \vec{s}_0\cdot c + \vec{s}_1)$.
   We will show that the domain of this function is at least $2^{3\secpar + \delta}$ times larger than the range.
   The number of possible secret keys is $(2\varphi+1)^{n\otspkkeylen} \cdot (2\varphi\alpha_H+1)^{n\otspkkeylen}$.
   The number of possible signatures is at most $(4\varphi\alpha_H + 1)^{n\otspkkeylen}$.
