--- a/CCS-FINAL/sections/veccom.tex
+++ b/CCS-FINAL/sections/veccom.tex
@@ -42,7 +42,7 @@ All our definitions and proofs directly apply to these generalization in a strai
 % Generally speaking, some of our proofs require careful distinction between $\ring$ and $\ring_q$, which is why we prefer to write $\equiv$ in place of $=$ whenever there is any chance of confusion.
 \begin{definition}[Individual Correctness]\label{def:individual_correctness}
 Let $\hvc$ be a vector commitment scheme for domain $\moddomain$ and vector length $2^\tau$.
-  $\hvc$ is individually correct, if for all security parameters $\secpar\in\NN$, vectors $\vec{m}\in\moddomain^{2^\tau}$, indices $1\leq t \leq 2^\tau$, parameters $\params \gets \setup(\secparam)$, commitments $\vec{c} \gets \commit(\params,\vec{m})$, and decommitments $\vec{d} \gets \open(\params,\vec{c},\vec{m},t)$ it holds that
+  $\hvc$ is individually correct, if for all security parameters $\secpar\in\NN$, vectors $\vec{m}\in\moddomain^{2^\tau}$, indices $1\leq t \leq 2^\tau$, parameters $\params \gets \setup(\secparam)$, commitments $\vec{c} \gets \commit(\params,\vec{m})$, and openings $\vec{d} \gets \open(\params,\vec{c},\vec{m},t)$ it holds that
   \[
     \iverify\Bigl(\params,\vec{c},t,\vec{d}\Bigr) = \vec{m}_{t}\enspace.
   \]
@@ -61,7 +61,7 @@ parameters $\params \gets \setup(\secparam)$, commitments $\vec{c}^i\in\modcommi
   \begin{align*}
     &\Pr\mleft[
       w^1,\dots,w^{\ell} \gets W \colon
-      \sverify\Bigl(\params,\sum_{i=1}^{\ell}w^i\cdot \vec{c}^i,t,\sum_{i=1}^{\ell}w^i\cdot \vec{d}^i\Bigr) = \sum_{i=1}^{\ell}w^i\cdot\vec{m}^i_{t}
+      \sverify\Bigl(\params,\sum_{i=1}^{\ell}w^i \vec{c}^i,t,\sum_{i=1}^{\ell}w^i \vec{d}^i\Bigr) = \sum_{i=1}^{\ell}w^i\vec{m}^i_{t}
     \mright] \\
     &\geq 1-\errorbound\enspace.
   \end{align*}
@@ -103,7 +103,7 @@ Finally, we require the commitments to be position binding.
 
 \subsection{Squirrel's Homomorphic Vector Commitment}\label{subsec:squirrelrecap}
 
-\begin{figure*}[h]
+\begin{figure*}
 {
 \def\svgwidth{\textwidth}
 \input{squirreltree.pdf_tex}
@@ -221,14 +221,14 @@ We then show that the projection function has nice homomorphic properties.
 %
 \begin{definition}[Projection and Decomposition for $\ring_q$]\label{def:proj_decomp_q}
 Fix some odd arity $(2\eta+1)$ and let $q$ be prime.
-Set $\limbs \coloneqq \ceil{\log_{2\eta+1}q}$
-We denote by
+Set $\limbs \coloneqq \normalceil{\log_{2\eta+1}q}$.
+We denote
 \[
  \projmod{q}\colon\,\ring^\limbs \to \ring_q,\quad \projmod{q}(\vec{a}) \coloneqq \projring(\vec{a})\bmod q\in\ring_q
 \]
-and by
+and
 \[
- \decompmod{q}\colon\,\ring_q \to \ring^\limbs,\quad \decompmod{q}(a) \coloneqq \decompring(a'),\enspace,
+ \decompmod{q}\colon\,\ring_q \to \ring^\limbs,\quad \decompmod{q}(a) \coloneqq \decompring(a')\enspace,
 \]
 where $a'$ is the representative of $a$ in $\ring$ with the coefficients being in $\{-\frac{q-1}{2},\ldots,+\frac{q-1}{2}\}$.
 \end{definition}
@@ -285,7 +285,7 @@ For the sake of readability we will at times abuse notation slightly and apply $
 Similarly, $\projmod{q}$ resp.\ $\projring$ may be applied to vectors of a length that is a \emph{multiple} of $\limbs$ to result in a vector of $\ring_q$ resp.\ $\ring$ elements.
 The above discussion generalizes to this extension.
 
-\begin{figure}[hpt]
+\begin{figure}
  \centering
  \begin{pcvstack}[center,boxed]
  \procedure{$\decompring(a)$}{
@@ -325,7 +325,7 @@ This is clear for $i=1$. Using induction, we compute
  {}=&r_{i}\cdot(2\eta+1)^{i-1} + \sum_{j=1}^{i-1} a_j(2\eta+1)^{j-1} = a\tag{induction hypothesis}
 \end{align*}
 For $i=\limbs$, this yields $a = \sum_{i=1}^{\limbs} a_i \cdot (2\eta+1)^{i-1}$. For uniqueness, note that we just showed that the map $\{-\eta,\ldots,\eta\}^{\limbs-1}\times \ZZ \to \ZZ$, $(a_1,\ldots,a_\limbs)\mapsto \sum_{i=1}^{\limbs} a_i \cdot (2\eta+1)^{i-1}$ is surjective. Taking this modulo $(2\eta+1)^{\limbs-1}$ gives us that $\{-\eta,\ldots,+\eta\}^{\limbs-1}\to \ZZ_{(2\eta+1)^{\limbs-1}}$,
-$(a_1,\ldots,a_{\limbs-1})\mapsto \sum_{i=1}^{\limbs-1} a_i \cdot (2\eta+1)^{i-1}\bmod (2\eta+1)^{\limbs-1}$ is surjective, hence injective (because domain and range have the same finite size). So $a_1,\ldots,a_{\limbs-1}$ are uniquely determined. Plugging this into \autoref{eq:decomp_proof} shows that $a_{\limbs}$ is uniquely determined as well.\qed
+$(a_1,\ldots,a_{\limbs-1})\mapsto \sum_{i=1}^{\limbs-1} a_i \cdot (2\eta+1)^{i-1}\bmod (2\eta+1)^{\limbs-1}$ is surjective, hence injective (because domain and range have the same finite size). So $a_1,\ldots,a_{\limbs-1}$ are uniquely determined. Plugging this into \autoref{eq:decomp_proof} shows that $a_{\limbs}$ is uniquely determined as well.
 \end{proof}
 
 
@@ -335,7 +335,7 @@ This lets us define a labeling function for a full binary tree matching \autoref
 
 \begin{definition}[Labeled Full Binary Tree]\label{def:label}
   Let $n,q,q',\xi\in\NN$ with $n$ a power of two and $q,q'$ primes.
-  Let $\vec{m}=(\vec{m}_{1},\dots,\vec{m}_{{2^{\tau}}})^\transpose\in(\ring_{q'}^\xi)^{2^{\tau}}$, $\vec{g} \in \ring_{q}^{\xi\ceil{\log_{2\eta+1} q'}}$ and $\vec{h}_0,\vec{h}_1 \in \ring_q^{\ceil{\log_{2\eta+1} q}}$ be fixed.
+  Let $\vec{m}=(\vec{m}_{1},\dots,\vec{m}_{{2^{\tau}}})^\transpose\in(\ring_{q'}^\xi)^{2^{\tau}}$, $\vec{g} \in \ring_{q}^{\xi\limbs'}$ and $\vec{h}_0,\vec{h}_1 \in \ring_q^{\limbs}$ be fixed.
   We define the labeling function
   $\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}\colon\,
   %\ring_{q}^{\xi\lceil\log_{2\eta+1} q'\rceil} \times (\ring_q^{\lceil\log_{2\eta+1} q\rceil})^2 \times 
@@ -350,7 +350,7 @@ This lets us define a labeling function for a full binary tree matching \autoref
                + \vec{h}_1^\transpose \cdot\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},v\concat 1)
                \end{aligned}
               \mright)& \text{if } \abs{v}< \tau
-      \end{cases}\enspace.
+      \end{cases}
   \]
 For this, remember that multiplication of elements from $\ring_q$ and $\ring$ is always understood\footnote{as opposed to taking some canonical representative of $\ring_q$-elements in $\ring$ and then multiplying in $\ring$} to give an element in $\ring_q$. For $\vec{m}_{v+1}$, we interpret $v\in\bin^{\tau}$ as an integer in $\{0\ldots, 2^\tau-1\}$ in big-endian encoding and add 1 (i.e.\ the inverse of taking $\tilde t = \binsca(t-1)$).
 \end{definition}
@@ -361,30 +361,31 @@ Using the labeling function, we can define Chipmunk's HVC as in \autoref{fig:hvc
 Let $n, q, q', \alpha_w, \rho, \eta, \tau, \xi,\bagg$ be positive integers such that $n$ is a power of two and $q,q'$ are primes.
 Let $\ring_q,\ring_{q'}$ be the polynomial rings $\defringq$ and $\defringqq$ respectively.
 We define the homomorphic vector commitment \eprint{$\hvcplain$}\cameraready{$\hvccamera$} for domain $\moddomain = \ring_{q'}^\xi$ and vectors of length $2^\tau$ by the algorithms given in \autoref{fig:hvcinst}.
-Its commitments and openings are from $\modcommit = \ring_q$ and $\modopening = (\ring^\limbs)^{2\tau}\times (\ring^{\limbs'})^{\xi}$, where $\limbs = \ceil{\log_{2\eta+1}q}, \limbs' = \ceil{\log_{2\eta+1}q'}$.
+Its commitments and openings are from $\modcommit = \ring_q$ and $\modopening = (\ring^\limbs)^{2\tau}\times (\ring^{\limbs'})^{\xi}$, where $\limbs = \normalceil{\log_{2\eta+1}q}, \limbs' = \normalceil{\log_{2\eta+1}q'}$.
 \end{definition}
 
-\begin{figure*}[pht]
+\begin{figure*}
 \centering
-\begin{pcvstack}[center,boxed]
-\begin{pchstack}[center]
-  \procedure{$\setup(\secparam)$}{
+\begin{pchstack}[boxed]
+\begin{pcvstack}
+  \procedure{$\setup(\secparam)$}{\\[-1.2em]
     \vec{g} \gets \ring_{q}^{\xi\kappa'}\\ % NOTE: \ring_q rather than \ring_{q'} is correct here.
     \vec{h}_0 \gets \ring_q^{\kappa}\\
     \vec{h}_1 \gets \ring_q^{\kappa}\\
     \pcreturn (\vec{g},\vec{h}_0,\vec{h}_1)
   }
   %
-  \pchspace
+  \pcvspace
   %
-  \procedure{$\commit(\params,\vec{m})$}{
+  \procedure{$\commit(\params,\vec{m})$}{\\[-1.2em]
     \vec{p}_0 \coloneqq \lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\emptylist)\\
     \vec{c} \coloneqq \projmod{q}(\vec{p}_0)\\
     \pcreturn \vec{c}\in\ring_q
   }
-\end{pchstack}
-\begin{pchstack}[center]
-    \procedure{$\open(\params,\vec{c},\vec{m},t)$}{
+  \end{pcvstack}
+  \pchspace
+  \begin{pcvstack}
+  \procedure{$\open(\params,\vec{c},\vec{m},t)$}{\\[-1.2em]
       \tilde t \coloneqq \binsca(t-1)\\
       \pcfor 1\leq j \leq \tau\\
       \quad \vec{p}_{j} \coloneqq \lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t_{< j}\concat \tilde t_{j})\\
@@ -392,70 +393,48 @@ Its commitments and openings are from $\modcommit = \ring_q$ and $\modopening = 
       \vec{u} \coloneqq \decompmod{q'}(\vec{m}_t)\\
       \pcreturn (\vec{p}_1,\dots,\vec{p}_\tau,\vec{s}_1,\dots,\vec{s}_\tau,\vec{u})
     }
-  %
-  \pchspace
-  %
-  \eprint{% cryptocode screws up LaTeX's \if -- WTF???
-  \procedure{$\verify(\params,\vec{c},t, \vec{d},\beta)$}{
+    \end{pcvstack}
+    \pchspace
+  \procedure{$\verify(\params,\vec{c},t, \vec{d},\beta)$}{\\[-1.2em]
     \pcparse \vec{d} \pcas (\vec{p}_1,\dots,\vec{p}_\tau,\vec{s}_1,\dots,\vec{s}_\tau,\vec{u})\\
     \tilde t \coloneqq \binsca(t-1)\\
-    \pcif \norm{\vec{u}} > \beta \pcor \vec{g}^\transpose \cdot \vec{u} \neq \projmod{q}(\vec{p}_\tau)\\
+    \pcif \norm{\vec{u}} > \beta \pcor \vec{g}^\transpose \cdot \vec{u} \neq \projmod{q}(\vec{p}_\tau)\\[-1ex]
     \quad \pcreturn \bot\\
     %\vec{p}_0 \coloneqq \vec{c}\\
-    \pcif \vec{c} \neq \vec{h}_{\tilde t_1}^\transpose\cdot \vec{p}_{1} + \vec{h}_{\tilde t_1 \xor 1}^\transpose \cdot \vec{s}_{1}\\
+    \pcif \vec{c} \neq \vec{h}_{\tilde t_1}^\transpose\cdot \vec{p}_{1} + \vec{h}_{\tilde t_1 \xor 1}^\transpose \cdot \vec{s}_{1}\\[-1ex]
     \quad\pcreturn \bot\\
     \pcfor 2 \leq j \leq \tau\\
-    \quad\pcif \projmod{q}(\vec{p}_{j-1}) \neq \vec{h}_{\tilde t_j}^\transpose\cdot \vec{p}_{j} + \vec{h}_{\tilde t_j \xor 1}^\transpose \cdot \vec{s}_{j}\\
+    \quad\pcif \projmod{q}(\vec{p}_{j-1}) \neq \vec{h}_{\tilde t_j}^\transpose\cdot \vec{p}_{j} + \vec{h}_{\tilde t_j \xor 1}^\transpose \cdot \vec{s}_{j}\\[-1ex]
     \quad\quad\pcreturn \bot\\
     \pcfor j \in \{1,\ldots,\tau\}\\
-    \quad \pcif \norm{\vec{p}_{j}} > \beta \pcor \norm{\vec{s}_{j}} > \beta\\
-    \quad \quad \pcreturn \bot \\
-    \quad \pcif \norm{\projring(\vec{p}_j)} > \tfrac{q\beta}{2\eta} \pcor \norm{\projring(\vec{s}_j)} > \tfrac{q\beta}{2\eta}\\
-    \quad \quad \pcreturn \bot\\
-    \pcreturn \projmod{q'}(\vec{u}) \in\ring_{q'}^\xi
-  }}
-  \cameraready{% cryptocode screws up LaTeX's \if -- WTF???
-  \procedure{$\verify(\params,\vec{c},t, \vec{d},\beta)$}{
-    \pcparse \vec{d} \pcas (\vec{p}_1,\dots,\vec{p}_\tau,\vec{s}_1,\dots,\vec{s}_\tau,\vec{u})\\
-    \tilde t \coloneqq \binsca(t-1)\\
-    \pcif \norm{\vec{u}} > \beta \pcor \vec{g}^\transpose \cdot \vec{u} \neq \projmod{q}(\vec{p}_\tau)\\
-    \quad \pcreturn \bot\\
-    %\vec{p}_0 \coloneqq \vec{c}\\
-    \pcif \vec{c} \neq \vec{h}_{\tilde t_1}^\transpose\cdot \vec{p}_{1} + \vec{h}_{\tilde t_1 \xor 1}^\transpose \cdot \vec{s}_{1}\\
-    \quad\pcreturn \bot\\
-    \pcfor 2 \leq j \leq \tau\\
-    \quad\pcif \projmod{q}(\vec{p}_{j-1}) \neq \vec{h}_{\tilde t_j}^\transpose\cdot \vec{p}_{j} + \vec{h}_{\tilde t_j \xor 1}^\transpose \cdot \vec{s}_{j}\\
-    \quad\quad\pcreturn \bot\\
-    \pcfor j \in \{1,\ldots,\tau\}\\
-    \quad \pcif \norm{\vec{p}_{j}} > \beta \pcor \norm{\vec{s}_{j}} > \beta\\
-    \quad \quad \pcreturn \bot \\
+    \quad \pcif \lVert\vec{p}_{j}\rVert > \beta \pcor \lVert\vec{s}_{j}\rVert > \beta\\
+    \quad \quad \pcreturn \bot \\[-1ex]
 %     \quad \pcif \norm{\projring(\vec{p}_j)} > \tfrac{q\beta}{2\eta} \pcor \norm{\projring(\vec{s}_j)} > \tfrac{q\beta}{2\eta}\\
 %     \quad \quad \pcreturn \bot\\
     \pcreturn \projmod{q'}(\vec{u}) \in\ring_{q'}^\xi
-  }}
-\end{pchstack}
-  \pcvspace
-\begin{pchstack}
-    \procedure{$\iverify(\params,\vec{c},t, \vec{d})$}{
+  }
+  \pchspace
+  \begin{pcvstack}
+    \procedure{$\iverify(\params,\vec{c},t, \vec{d})$}{\\[-1.2em]
       \pcreturn \verify(\params,\vec{c},t, \vec{d},\eta)
     }
-    \pchspace
-    \procedure{$\sverify(\params,\vec{c},t, \vec{d})$}{
+    \pcvspace
+    \procedure{$\sverify(\params,\vec{c},t, \vec{d})$}{\\[-1.2em]
       \pcreturn \verify(\params,\vec{c},t, \vec{d},\bagg)
     }
-    \pchspace
-    \procedure{$\wverify(\params,\vec{c},t, \vec{d})$}{
+    \pcvspace
+    \procedure{$\wverify(\params,\vec{c},t, \vec{d})$}{\\[-1.2em]
       \pcreturn \verify(\params,\vec{c},t, \vec{d},2\bagg)
     }
+  \end{pcvstack}
 \end{pchstack}
-\end{pcvstack}
 \caption{%
 % Note: The autoref{def:hvc_chipmunk_unencoded} is just to create a hyperlink in case the figure is placed badly.
 The construction of the homomorphic vector commitment \eprint{$\hvcplain$}\cameraready{$\hvccamera$} for message space $\moddomain = \ring^\xi_{q'}$ based on a labeled binary tree, cf.~\autoref{def:hvc_chipmunk_unencoded}.
 Commitments $\vec{c}$ are in $\modcommit = \ring_q$.
 Openings are small elements in $\modopening = (\ring^\limbs)^{2\tau}\times (\ring^{\limbs'})^{\xi}$, where
-$\limbs = \ceil{\log_{2\eta+1}q}$, $\limbs' = \ceil{\log_{2\eta+1}q'}$.
-Let us clarify again that multiplication of $\ring_q$ with $\ring$ elements as done in the Ajtai hashes like $\vec{g}^\transpose\cdot\vec{u}$ is understood to give an element in $\ring_q$, i.e.\ we perform modular reduction here.
+$\limbs = \normalceil{\log_{2\eta+1}q}$, $\limbs' = \normalceil{\log_{2\eta+1}q'}$.
+Note that multiplication of $\ring_q$ with $\ring$ elements as in the computation of Ajtai hashes is understood to give an element in $\ring_q$, i.e.\ modular reduction is performed.
 }
 \label{fig:hvcinst}
 \end{figure*}
@@ -499,16 +478,17 @@ These tighter bounds are not present in Squirrel or in the extended abstract of 
 \[
 \bagg \geq \eta\sqrt{2\alpha_w\rho
   \bigl(
-  \ln\tfrac{2n}{\errorbound} +  \ln(2\tau \ceil{\log_{2\eta+1}q} + \xi\lceil\log_{2\eta+1}q'\rceil \eprint{+ 2\tau})
+  \ln\tfrac{2n}{\errorbound} +  \ln(2\tau\limbs + \xi\limbs')
   \bigr)}\enspace.
 \]
+where $\limbs = \normalceil{\log_{2\eta+1}q}$ and $\limbs' = \normalceil{\log_{2\eta+1}q'}$.
 % \gnote{Simplify formula by using $\oplen$?}
   Let $\ring_q,\ring_{q'}$ be the polynomial rings $\defringq$ and $\defringqq$ respectively.
 %  Let $\alpha$ be the smallest integer, such that $\binom{n}{\alpha}\cdot 2^\alpha \geq 2^\secpar$.
   If the problems 
-  \[
-  \sis_{\ring,q,2\ceil{\log_{2\eta+1} q},4\bagg} \text{ and }\sis_{\ring,q,\xi\ceil{\log_{2\eta+1} q'} ,4\bagg}
-  \] are hard,
+  $
+  \sis_{\ring,q,2\limbs q,4\bagg} \text{ and }\sis_{\ring,q,\xi\limbs' ,4\bagg}
+  $ are hard,
   then \eprint{$\hvcplain$}\cameraready{$\hvccamera$} is an individually correct, a $(\rho,\tern_{\alpha_w},\errorbound)$-probabilistically homomorphic, robustly homomorphic, and position binding HVC for domain $\ring^{\xi}_{q'}$ and vector length $2^\tau$.
 \end{theorem}
 \begin{proof}
@@ -527,7 +507,7 @@ $(\vec{p}_1,\dots,\vec{p}_{\tau},\vec{s}_1, \dots, \vec{s}_{\tau},\vec{u})^\tran
 We first observe that for all $j\in\{1,\ldots,\tau\}$ it holds in $\ring_q$ that
 \begin{align*}
   \projmod{q}(\vec{p}_{j-1})
-  ={}&\projmod{q}\left(\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t_{< j})\right)\\
+  ={}&\projmod{q}(\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t_{< j}))\\
   ={}&\projmod{q}\left(\decompmod{q}\left(
       \begin{aligned}
         &\vec{h}_0^\transpose \cdot\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t_{< j}\Vert 0)\\
@@ -538,14 +518,14 @@ We first observe that for all $j\in\{1,\ldots,\tau\}$ it holds in $\ring_q$ that
   ={}&\vec{h}_{\tilde t_{j}}^\transpose \cdot\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t_{< j}\Vert \tilde t_{j})\\ + &\vec{h}_{\tilde t_{j}\xor 1}^\transpose \cdot\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t_{< j}\Vert (\tilde t_{j}\xor 1))\\
   ={}&\vec{h}_{\tilde t_{j}}^\transpose \cdot\vec{p}_{j} + \vec{h}_{\tilde t_{j}\xor 1}^\transpose \cdot\vec{s}_{j}.
 \end{align*}
-Observe that for $j=1$, this gives $\vec{c} = \vec{h}_{\tilde t_1}^\transpose\cdot \vec{p}_{1} + \vec{h}_{\tilde t_1 \xor 1}^\transpose \cdot \vec{s}_{1}$ in $\ring_q$.
+Observe that for $j=1$, this gives $\vec{c} = \vec{h}_{\tilde t_1}^\transpose \vec{p}_{1} + \vec{h}_{\tilde t_1 \xor 1}^\transpose  \vec{s}_{1}$ in $\ring_q$.
 Further it holds that
 \begin{align*}
   \projmod{q}(\vec{p}_{\tau})
   ={}&\projmod{q}(\lbl_{\vec{g},\vec{h}_0,\vec{h}_1}(\vec{m},\tilde t))\\
   ={}&\projmod{q}(\decompmod{q}(\vec{g}^\transpose\cdot \decompmod{q'}(\vec{m}_t)))\\
-  ={}&\vec{g}^\transpose\cdot \decompmod{q'}(\vec{m}_t)\\
-  ={}&\vec{g}^\transpose\cdot\vec{u}.
+  ={}&\vec{g}^\transpose\cdot \decompmod{q'}(\vec{m}_t)
+  =\vec{g}^\transpose\cdot\vec{u}.
 \end{align*}
 %
 Therefore it only remains to check that the norm bounds are not violated.
@@ -557,29 +537,7 @@ By design, this implies that the resulting coefficients are in $\{-\eta,\dots,\e
 It also implies that applying $\projring$ to $\vec{p}_j$ or $\vec{s}_j$ gives back the representative with coefficients in $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$ that was decomposed.
 Consequently, we have $\norm{\projring(\vec{p}_j)}, \norm{\projring(\vec{s}_j)} \leq \tfrac{q-1}{2}$.%
 }
-\qed
 \end{proof}
-
-
-% By a union bound it is thus sufficient to show that each individual coefficient violates the bound with probability at most $2^{-\errorbound}/(n(2\tau\lceil\log_{2\eta+1} q\rceil + \xi\lceil\log_{2\eta+1} q'\rceil)+2\tau)$.
-%   
-%   For each individual $\vec{p}^i$, $\vec{s}^i$, $\vec{u}^i$ it holds by the definition of $\iverify$ that
-%   \[
-%     \norm{\vec{p}^i} \leq \eta, \quad \norm{\vec{s}^i} \leq \eta,\quad \text{and} \quad\norm{\vec{u}^i}\leq \eta.
-%   \]
-%   For each $\proj(\vec{p}_j^i)$ and $\proj(\vec{s}_j^i)$, by the definition of $\iverify$, we have
-%   \[
-%    \norm{\proj(\vec{p}_j^i)} < \tfrac{q}{2},\quad\text{and} \quad\norm{\proj(\vec{s}_j^i)} < \tfrac{q}{2}
-%   \]
-% 
-%   Recall that each $w^i$ is a ternary polynomial with weight $\alpha_w$.
-%   Therefore, each coefficient is a sum of the form
-%   \(
-%     \sum_{j=1}^{\alpha_w\ell}b_j c_j
-%   \)
-%   where $\abs{c_j}\leq \eta$ and $b_j$ is chosen uniformly from $\{-1,1\}$.
-%   By linearity of expectation, the expected value of this sum is always zero and changing any summand can vary the sum by at most $2\eta$. We can thus apply McDiarmid's inequality~\cite{McDiarmid89} and the lower bound on $\bagg$ from the lemma statement to obtain the following bound on the probability that each individual coefficient exceeds the norm bound $\bagg$ for those cases where the bound is $\bagg$.
-
 
 % Lemma about probabilistic homomorphism
 \begin{lemma}\label{lem:hvcprobhom}
@@ -589,10 +547,10 @@ and
   \[
   \bagg \geq \eta\sqrt{2\alpha_w\rho
   \bigl(
-  \ln\tfrac{2n}{\errorbound} +  \ln(2\tau\kappa  + \xi\kappa' \eprint{+ 2\tau})
+  \ln\tfrac{2n}{\errorbound} +  \ln(2\tau\limbs  + \xi\limbs' \eprint{+ 2\tau})
   \bigr)}\enspace,
   \]
-  where $\kappa=\ceil{\log_{2\eta+1}q}$ and $\kappa'=\lceil\log_{2\eta+1}q'\rceil$.
+  where $\limbs=\normalceil{\log_{2\eta+1}q}$ and $\limbs'=\lceil\log_{2\eta+1}q'\rceil$.
   Let $\ring_q,\ring_{q'}$ be the polynomial rings $\defringq$ and $\defringqq$ respectively.
   Then \eprint{$\hvcplain$}\cameraready{$\hvccamera$} is a $(\rho,\tern_\alpha,\errorbound)$-probabilistically homomorphic HVC for domain $\ring^\xi_{q'}$ and vector length $2^\tau$.
 \end{lemma}
@@ -613,8 +571,8 @@ We first note that even for arbitrary $w^1,\dots,w^{\ell}\in\tern_{\alpha_w}$ it
 and similarly
 \begin{align*}
   \projmod{q}\Bigl(\sum_{i=1}^{\ell}w^i\cdot\vec{p}_{\tau}^i\Bigr) ={}&\sum_{i=1}^{\ell}w^i\cdot\projmod{q}(\vec{p}_{\tau}^i)\\
-  ={}&\sum_{i=1}^{\ell}w^i\cdot(\vec{g}^\transpose\cdot \vec{u}^i)\\
-  ={}&\vec{g}^\transpose\cdot\sum_{i=1}^{\ell}w^i\vec{u}^i 
+  ={}&\sum_{i=1}^{\ell}w^i\cdot(\vec{g}^\transpose\cdot \vec{u}^i)
+  =\vec{g}^\transpose\cdot\sum_{i=1}^{\ell}w^i\vec{u}^i 
 \end{align*}
 and similarly that 
 \begin{align*}
@@ -677,46 +635,6 @@ It follows that with probability at least $1-\errorbound$, the strong verificati
     ={}&\sum_{i=1}^{\ell}w^i \cdot \vec{m}_t^i\enspace,
   \end{align*}
   as required.%
-  \qed
- 
-% To bound this probability, consider that the norm-bound is violated, iff the absolute value of at least one of the
-% $n(2\tau\lceil\log_{2\eta+1} q\rceil  + \xi\lceil\log_{2\eta+1} q'\rceil + 2\tau)$
-% coefficients in one of the sums 
-% $\sum_{i=1}^{\ell} w^i\cdot\vec{p}^i$,
-% $\sum_{i=1}^{\ell} w^i\cdot\vec{s}^i$,
-% $\sum_{i=1}^{\ell} w^i\cdot\vec{u}^i$,
-% $\sum_{i=1}^{\ell} w^i\cdot\proj(\vec{p}_j^i)$, and
-% $\sum_{i=1}^{\ell} w^i\cdot\proj(\vec{s}_j^i)$
-% is greater than its appropriate bound $\bagg$.
-% By a union bound it is thus sufficient to show that each individual coefficient violates the bound with probability at most $2^{-\errorbound}/(n(2\tau\lceil\log_{2\eta+1} q\rceil + \xi\lceil\log_{2\eta+1} q'\rceil)+2\tau)$.
-%   
-%   For each individual $\vec{p}^i$, $\vec{s}^i$, $\vec{u}^i$ it holds by the definition of $\iverify$ that
-%   \[
-%     \norm{\vec{p}^i} \leq \eta, \quad \norm{\vec{s}^i} \leq \eta,\quad \text{and} \quad\norm{\vec{u}^i}\leq \eta.
-%   \]
-%   For each $\proj(\vec{p}_j^i)$ and $\proj(\vec{s}_j^i)$, by the definition of $\iverify$, we have
-%   \[
-%    \norm{\proj(\vec{p}_j^i)} < \tfrac{q}{2},\quad\text{and} \quad\norm{\proj(\vec{s}_j^i)} < \tfrac{q}{2}
-%   \]
-% 
-%   Recall that each $w^i$ is a ternary polynomial with weight $\alpha_w$.
-%   Therefore, each coefficient is a sum of the form
-%   \(
-%     \sum_{j=1}^{\alpha_w\ell}b_j c_j
-%   \)
-%   where $\abs{c_j}\leq \eta$ and $b_j$ is chosen uniformly from $\{-1,1\}$.
-%   By linearity of expectation, the expected value of this sum is always zero and changing any summand can vary the sum by at most $2\eta$. We can thus apply McDiarmid's inequality~\cite{McDiarmid89} and the lower bound on $\bagg$ from the lemma statement to obtain the following bound on the probability that each individual coefficient exceeds the norm bound $\bagg$ for those cases where the bound is $\bagg$.
-%   \begin{align*}
-%     &\Pr\Bigl[\vec{b}\gets\{-1,1\}^{\alpha_w\ell} : \Bigl|\smashoperator{\sum_{j=1}^{\alpha_w\ell}}b_j c_j\Bigr| > \bagg\Bigr]\\
-%     \leq{}& 2\cdot\exp\Bigl(-\frac{2\bagg^2}{\alpha_w\ell\cdot (2\eta)^2}\Bigr)\\
-%     ={}& 2\cdot\exp\Bigl(-\frac{\bagg^2}{2\alpha_w\rho \eta^2}\Bigr)\\
-%     \leq{}& 2\cdot\exp\Bigl(-\frac{\eta^2 2\alpha_w\rho(\errorbound + 1 +\log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil))\cdot\ln2}{2\alpha_w\rho \eta^2}\Bigr)\\
-%     ={}& 2\cdot 2^{-(\errorbound + 1 +\log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil))\cdot}\\
-%     ={}& 2^{-\errorbound}\cdot\frac{1}{n\cdot(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil)}.
-%   \end{align*}
-%   %
-%   Since only the ratio between $\bagg$ and $\eta$ enters here, the exact same argument applies to the bounds by $\tfrac{q\bagg}{2\eta}$.
-%   
 \end{proof}
 
 \begin{lemma}\label{lem:hvcrobhom}
@@ -750,8 +668,8 @@ For this, let further $\vec{p}^i_0 = \vec{c}^i$.
 By definition of the strong verification algorithm, and since $\vec{m}^0,\vec{m}^1\neq\bot$ it holds that for $i\in\bin$ 
 and $j \in \interval{\tau}$ that the following two conditions hold
 \begin{align}
-  \norm{\vec{p}^i_{j}} \leq \bagg\quad\text{and}\quad
-  \norm{\vec{s}^i_{j}} \leq \bagg\label{eq:robhomnormcheck}\\
+  \lVert\vec{p}^i_{j}\rVert \leq \bagg\quad\text{and}\quad
+  \lVert\vec{s}^i_{j}\rVert \leq \bagg\label{eq:robhomnormcheck}\\
   \projmod{q}(\vec{p}^i_{j-1}) = \vec{h}_{\tilde t_j}^\transpose\cdot \vec{p}^i_{j} + \vec{h}_{\tilde t_j\xor 1}^\transpose \cdot \vec{s}^i_{j}\enspace.\label{eq:robhompathcheck}
   \end{align}
   Similarly it holds that
@@ -766,12 +684,12 @@ and $j \in \interval{\tau}$ that the following two conditions hold
   }
 From \autoref{eq:robhomnormcheck} and \autoref{eq:robhompaycheck} it follows that for all $j \in \interval{\tau}$
   \begin{align*}
-    \norm{\vec{p}_j^0-\vec{p}_j^1} \leq& \norm{\vec{p}_j^0} + \norm{\vec{p}_j^1} \leq 2\bagg\\
-    \norm{\vec{s}_j^0-\vec{s}_j^1} \leq& \norm{\vec{s}_j^0} + \norm{\vec{s}_j^1} \leq 2\bagg
+    \lVert\vec{p}_j^0-\vec{p}_j^1\rVert \leq& \lVert{\vec{p}_j^0}\rVert + \lVert{\vec{p}_j^1}\rVert \leq 2\bagg\\
+    \lVert{\vec{s}_j^0-\vec{s}_j^1}\rVert \leq& \lVert{\vec{s}_j^0}\rVert + \lVert{\vec{s}_j^1}\rVert \leq 2\bagg
   \end{align*}
   and also that
   \[
-      \norm{\vec{u}^0-\vec{u}^1} \leq \norm{\vec{u}^0} + \norm{\vec{u}^1} \leq 2\bagg\enspace.
+      \lVert{\vec{u}^0-\vec{u}^1}\rVert \leq \lVert{\vec{u}^0}\rVert + \lVert{\vec{u}^1}\rVert \leq 2\bagg\enspace.
   \]
   \eprint{%
   From \autoref{eq:robhomprojcheck} and linearity of $\projring$, it follows that
@@ -785,26 +703,27 @@ By Equations \ref{eq:robhompathcheck} and \ref{eq:robhompaycheck} and the linear
   \begin{align*}
     \projmod{q}(\vec{p}^0_{j-1}-\vec{p}^1_{j-1})
     ={} &\projmod{q}(\vec{p}^0_{j-1})-\projmod{q}(\vec{p}^1_{j-1})\\
-    ={} &(\vec{h}_{\tilde t_j}^\transpose\cdot \vec{p}^0_{j} + \vec{h}_{\tilde t_j\xor 1}^\transpose \cdot \vec{s}^0_{j})- (\vec{h}_{\tilde t_j}^\transpose\cdot \vec{p}^1_{j} + \vec{h}_{\tilde t_j\xor 1}^\transpose \cdot \vec{s}^1_{j})\\
-    ={} &\vec{h}_{\tilde t_j}^\transpose\cdot (\vec{p}^0_{j} - \vec{p}^1_{j}) + \vec{h}_{\tilde t_j\xor 1}^\transpose \cdot (\vec{s}^0_{j} - \vec{s}^1_{j})\enspace.
+    ={} &(\vec{h}_{\tilde t_j}^\transpose \vec{p}^0_{j} + \vec{h}_{\tilde t_j\xor 1}^\transpose  \vec{s}^0_{j})- (\vec{h}_{\tilde t_j}^\transpose \vec{p}^1_{j} + \vec{h}_{\tilde t_j\xor 1}^\transpose  \vec{s}^1_{j})\\
+    ={} &\vec{h}_{\tilde t_j}^\transpose (\vec{p}^0_{j} - \vec{p}^1_{j}) + \vec{h}_{\tilde t_j\xor 1}^\transpose  (\vec{s}^0_{j} - \vec{s}^1_{j})\enspace.
   \end{align*}
   and
   \begin{align*}
     \projmod{q}(\vec{p}^0_{\tau}-\vec{p}^1_{\tau})
     ={} &\projmod{q}(\vec{p}^0_{\tau})-\projmod{q}(\vec{p}^1_{\tau})\\
-    ={} &(\vec{g}^\transpose\cdot \vec{u}^0 - \vec{g}^\transpose \cdot \vec{u}^1)\\
-    ={} &\vec{g}^\transpose\cdot (\vec{u}^0 - \vec{u}^1)\enspace.
+    ={} &(\vec{g}^\transpose \vec{u}^0 - \vec{g}^\transpose  \vec{u}^1)
+    =\vec{g}^\transpose (\vec{u}^0 - \vec{u}^1)\enspace.
   \end{align*}
-  Thus, all checks in the weak verification algorithm go through and $\wverify(\params,\vec{c}^0-\vec{c}^1, t,\vec{d}^0-\vec{d}^1)\neq\bot$.\qed
+  Thus, all checks in the weak verification algorithm go through and $\wverify(\params,\vec{c}^0-\vec{c}^1, t,\vec{d}^0-\vec{d}^1)\neq\bot$.
 \end{proof}
 
 \begin{lemma}\label{lem:hvcposbind}
   Let $n,q,q',\alpha_w,\rho,\eta,\tau,\xi,\bagg$ be positive integers and $0 < \errorbound \leq 1$, such that $n$ is a power of two, $q,q'$ are prime.
+  Let $\limbs \coloneqq \normalceil{\log_{2\eta+1}q}$ and $\limbs' \coloneqq \normalceil{\log_{2\eta+1}q'}$.
   Let $\ring_q,\ring_{q'}$ be the polynomial rings $\defringq$ and $\defringqq$ respectively.
   If the problems
-  \[ 
-  \sis_{\ring,q,2\normalceil{\log_{2\eta+1} q},4\bagg} \text{ and } \sis_{\ring,q,\xi\normalceil{\log_{2\eta+1} q'},4\bagg}
-  \] are hard, then \eprint{$\hvcplain$}\cameraready{$\hvccamera$} is position binding.
+  $ 
+  \sis_{\ring,q,2\limbs,4\bagg} \text{ and } \sis_{\ring,q,\xi\limbs',4\bagg}
+  $ are hard, then \eprint{$\hvcplain$}\cameraready{$\hvccamera$} is position binding.
 \end{lemma}
 \begin{proof}
 This proof once again follows very closely the proof shown in \cite{CCS:FleSimZha22}.
@@ -830,23 +749,23 @@ We will prove this lemma by leveraging that any pair of valid decommitments for 
     = {}& \Pr[&&(\vec{u}^0-\vec{u}^1) \in \ball{4\bagg}{q}^{\xi\normalceil{\log_{2\eta+1}q'}}\setminus \{\vec{0}\} \land \vec{g}^\transpose\cdot (\vec{u}^0-\vec{u}^1) = 0]\\
     \leq{}& &&\negl\enspace,
   \end{alignat*}
-  where we used the definition of $\wverify$ and the last inequality follows from the assumed hardness of the $\sis_{\ring,q,\xi\normalceil{\log_{2\eta+1} q'},4\bagg}$ problem and the fact that all involved algorithms are PPT.
+  where we used the definition of $\wverify$ and the last inequality follows from the assumed hardness of the $\sis_{\ring,q,\xi\limbs',4\bagg}$ problem and the fact that all involved algorithms are PPT.
   
   We now analyze 
   \[
     \Pr[\vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\} \land \vec{p}_\tau^0 \bmod q \neq \vec{p}_\tau^1 \bmod q]\enspace.
   \]
-  We construct a PPT algorithm $\sisadv$ that solves the $\sis_{\ring,q,2 \normalceil{\log_{2\eta+1} q},4\bagg}$ problem as follows.
-  Upon input $\vec{a}=(a_1,\dots,a_{2 \normalceil{\log_{2\eta+1} q}})^\transpose$,
+  We construct a PPT algorithm $\sisadv$ that solves the $\sis_{\ring,q,2 \limbs,4\bagg}$ problem as follows.
+  Upon input $\vec{a}=(a_1,\dots,a_{2 \limbs})^\transpose$,
   $\sisadv$ sets 
-  \[\vec{h}_0\coloneqq(a_1,\dots,a_{\normalceil{\log_{2\eta+1} q}})^\transpose \] and 
-  \[\vec{h}_1 \coloneqq (a_{\normalceil{\log_{2\eta+1} q}+1},\dots,\allowbreak a_{2\normalceil{\log_{2\eta+1} q}})^\transpose\],
-  then samples $\vec{g} \gets \ring_q^{\xi\normalceil{\log_{2\eta+1} q'}}$, sets $\params \coloneqq (\vec{g}, \vec{h}_0, \vec{h}_1)$, and runs 
+  $\vec{h}_0\coloneqq(a_1,\dots,a_{\limbs})^\transpose$ and 
+  $\vec{h}_1 \coloneqq (a_{\limbs+1},\dots,\allowbreak a_{2\limbs})^\transpose$
+  then samples $\vec{g} \gets \ring_q^{\xi\limbs'}$, sets $\params \coloneqq (\vec{g}, \vec{h}_0, \vec{h}_1)$, and runs 
   $(\vec{c}, t,\vec{d}^0,\vec{d}^1) \gets \adv(\params)$.
 %   \gnote{Fixed typo, changing $t$ to $\tilde t$ here. Also renamed $\bdv$ to $\sisadv$ to avoid notational clash with ball. @Nils: Please double check I did not mess up.}
   For $i\in\bin$, let $m^i \coloneqq \wverify(\params,\vec{c},t,\vec{d}^i)$.
   If $\vec{m}^0 = \vec{m}^1$, $\bot\in\{\vec{m}^0,\vec{m}^1\}$, or $\projmod{q}(\vec{p}_\tau^0) = \projmod{q}(\vec{p}_\tau^1)$, $\sisadv$ aborts.
-  Otherwise, parse $\vec{d}^i$ as $(\vec{p}^i_1,\dots,\vec{p}^i_{\tau},\vec{s}^i_1,\dots,\vec{s}^i_\tau,\vec{u}^i)$, set $\vec{p}^i_0 \coloneqq \decompmod{q}(\vec{c})$, $\tilde{t}\coloneqq \binsca(t-1)$.
+  Otherwise, parse $\vec{d}^i$ as $(\vec{p}^i_1,\dots,\allowbreak\vec{p}^i_{\tau},\vec{s}^i_1,\dots,\vec{s}^i_\tau,\vec{u}^i)$, set $\vec{p}^i_0 \coloneqq \decompmod{q}(\vec{c})$, $\tilde{t}\coloneqq \binsca(t-1)$.
   
   Let $j^*\in \interval{\tau+1}$ be the \emph{largest} index, such that $\projmod{q}(\vec{p}^0_{j^*-1})\neq\projmod{q}(\vec{p}^1_{j^*-1})$.
   Note that such an index always exists, since $\vec{p}^0_0 = \decompmod{q}(\vec{c}) = \vec{p}^1_0$, and that $j^* < \tau$, since $\projmod{q}(\vec{p}_\tau^0) \neq \projmod{q}(\vec{p}_\tau^1)$.
@@ -862,38 +781,38 @@ We will prove this lemma by leveraging that any pair of valid decommitments for 
   \end{align*}
   It further holds by the definition of the weak verification algorithm that 
   \[
-  \norm{\vec{p}_{j^*}^0} \leq 2\bagg,\quad \norm{\vec{s}_{j^*}^0} \leq 2\bagg, \quad\norm{\vec{p}_{j^*}^1} \leq 2\bagg, \quad \norm{\vec{s}_{j^*}^1} \leq 2\bagg\enspace.
+  \lVert{\vec{p}_{j^*}^0}\rVert \leq 2\bagg,\quad\!\! \lVert{\vec{s}_{j^*}^0}\rVert \leq 2\bagg, \quad\!\!\lVert{\vec{p}_{j^*}^1}\rVert \leq 2\bagg, \quad\!\! \lVert{\vec{s}_{j^*}^1}\rVert \leq 2\bagg.
   \]
   Therefore, the norm of $\vec{z}$ can be bounded as
   \[
-  \norm{\vec{z}} \leq \max\{\norm{\vec{p}_{j^*}^0},\norm{\vec{s}_{j^*}^0}\}+\max\{\norm{\vec{p}_{j^*}^1},\norm{\vec{s}_{j^*}^1}\} \leq 4\bagg\enspace.
+  \lVert{\vec{z}}\rVert \leq \max\{\lVert{\vec{p}_{j^*}^0}\rVert,\lVert{\vec{s}_{j^*}^0}\rVert\}+\max\{\lVert{\vec{p}_{j^*}^1}\rVert,\lVert{\vec{s}_{j^*}^1}\rVert\} \leq 4\bagg\enspace.
   \]
   It remains to show that $\vec{z}\neq 0$.
   Since $j^*$ is the \emph{largest} index such that 
-  \[
-    \projmod{q}(\vec{p}_{j^*-1}^0) =  \projmod{q}(\vec{p}_{j^*-1}^1)\enspace,
-  \]
+  $
+    \projmod{q}(\vec{p}_{j^*-1}^0) =  \projmod{q}(\vec{p}_{j^*-1}^1)
+  $,
   it holds that
-  \[
+  $
     \projmod{q}(\vec{p}_{j^*}^0) \neq \projmod{q}(\vec{p}_{j^*}^1)
-  \]
+  $
   and thereby that
-  \[
-    \vec{p}_{j^*}^0 \neq \vec{p}_{j^*}^1\enspace.
-  \]
+  $
+    \vec{p}_{j^*}^0 \neq \vec{p}_{j^*}^1
+  $.
   Therefore $\vec{z}\neq\vec{0}$.
   Thus, whenever $\adv$ is successful, $\sisadv$ is successful with probability $1$ and we can conclude that
   \begin{align*}
   &\Pr[
-      \vec{a} \gets \ring_q^{2\normalceil{\log_{2\eta+1} q}}; \vec{z}\gets\sisadv(\vec{a}) \colon \vec{z}\in\ball{4\bagg}{q}^{2\normalceil{\log_{2\eta+1} q}}\setminus\{\vec{0}\} \land \vec{a}^\transpose\vec{z}\equiv 0
+      \vec{a} \gets \ring_q^{2\limbs}; \vec{z}\gets\sisadv(\vec{a}) \colon \vec{z}\in\ball{4\bagg}{q}^{2\limbs}\setminus\{\vec{0}\} \land \vec{a}^\transpose\vec{z}\equiv 0
     ]\\
     ={}&
     \Pr[\vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\} \land \vec{p}_\tau^0 \bmod q\neq \vec{p}_\tau^1\bmod q] \\
-    &\leq \negl.
+    \leq{}& \negl.
   \end{align*}
   Combining the above, it follows that
   \[
-    \Pr[\vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\}] \leq \negl\enspace,
+    \Pr[\vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\}] \leq \negl
   \]
   as required.
 \end{proof}
@@ -905,25 +824,26 @@ Let us collect in \autoref{table:hvcsizescamera} the individual components of $\
 Note that the strongly verifying case will correspond to the constribution for the size of aggregated signatures later in \autoref{sec:nidv}, and this size is the most important metric we want to minimize.
 
 A commitment is a (non-short) single element from $\ring_q$. This means we can use $n\ceil{\log q}$ bits to store it.\footnote{In principle, we could do $\ceil{n\log q}$ by using some clever arithmetic encoding; hoever, for simplicity, we assume here that every coefficient is stored individually.}
-An opening consists of $\oplen = 2\tau\ceil{\log_{2\eta+1}q} + \xi\ceil{\log_{2\eta+1}q'}$ many elements from $\ring$.
+An opening consists of $\oplen = 2\tau\normalceil{\log_{2\eta+1}q} + \xi\normalceil{\log_{2\eta+1}q'}$ many elements from $\ring$.
 Each element is $\norm{.}_\infty$-bounded: for individually verifying openings, the bound is $\eta$, giving $n\oplen\ceil{\log (2\eta+1)}$ bits if done naively. For strongly verifying opening, the bound is $\bagg$, giving $n\oplen\ceil{\log (2\bagg+1)}$ bits. For honestly generated%
 \footnote{%
-We need here that $\projmod{q}(\vec{p}_j)$ uniquely determines $\vec{p}_j$. This is the case for \emph{honestly generated}, unaggregated commitments. Note that we require them to be honestly generated rather than individually verifying: a dishonest committer could choose some $\vec{p}_j$ with a coordinate $x$ that is not fully reduced modulo $q$ but still satisfies $\abs{\projring(x)} < \eta$. In that case, $\projmod{q}(\vec{p}_j)$ only determines $\vec{p}_j \bmod q$, which is not enough.%
+We need here that $\projmod{q}(\vec{p}_j)$ uniquely determines $\vec{p}_j$. This is the case for \emph{honestly generated}, unaggregated commitments. Note that we require them to be honestly generated rather than individually verifying: a dishonest committer could choose some $\vec{p}_j$ with a coordinate $x$ that is not fully reduced modulo $q$ but still satisfies $\lvert\projring(x)\rvert < \eta$. In that case, $\projmod{q}(\vec{p}_j)$ only determines $\vec{p}_j \bmod q$, which is not enough.%
 }
 unaggregated commitments, we can actually do better: as in a usual Merkle tree opening, we do not need the $\vec{p}_j$'s as part of the decommitments but only the $\vec{s}_j$'s, as the verifier can actually compute all $\projmod{q}(\vec{p}_j)$ by themselves and the $\projmod{q}(\vec{p}_j)$ uniquely determine the $\vec{p}_j$. This means that only $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$ bits need to be transmitted. In the full version\cite{TODO}, we present a generalization of this trick that can also be applied to aggregated decommitments.
 
-\begin{table*}\centering
- \begin{tabular}{cc@{\hskip 3.5ex}l}
-  & & size in bits \\\toprule
-  commitments & & $n\ceil{\log q}$\\
-  \hline
-  \multirow{2}{*}{opening} &individually verifying & $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$\\\cline{2-3}
-                           &strongly verifying & $\bigl(2\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\bagg+1)}$\\
-                           \hline
+\begin{table}\centering
+ \begin{tabular}{c@{\hskip 1ex}l}
+  \toprule
+  Component& Size in Bits \\
+  \midrule
+  Commitment & $n\ceil{\log q}$\\
+  Individually Verifying Opening & $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$\\%\cline{2-3}
+  Strongly Verifying Opening & $\bigl(2\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\bagg+1)}$\\
+                           \bottomrule
  \end{tabular}
  \medskip % Alternatively, put caption on top (some style guides suggest this)
- \caption{\cameraready{bitlength of our HVC construction $\hvccamera$. We denote by $\limbs = \ceil{\log_{2\eta+1}q}$ and $\limbs' = \ceil{\log_{2\eta+1}q'}$ the number of limbs for the decompositions of $\ring_q$ resp.\ $\ring_{q'}$ elements. Note that in the individually verifying case, we do not include the $\vec{p}_j$ here, but only the sibling nodes $\vec{s}_j$.}}
+ \caption{\cameraready{Bitlength of our HVC construction $\hvccamera$. We denote by $\limbs = \normalceil{\log_{2\eta+1}q}$ and $\limbs' = \normalceil{\log_{2\eta+1}q'}$ the number of limbs for the decompositions of $\ring_q$ resp.\ $\ring_{q'}$ elements. Note that in the individually verifying case, we do not include the $\vec{p}_j$ here, but only the sibling nodes $\vec{s}_j$.}}
  \label{table:hvcsizescamera}
-\end{table*}
+\end{table}
 \end{remark}
 }
