--- a/CCS-FINAL/sections/appconstraints.tex
+++ b/CCS-FINAL/sections/appconstraints.tex
@@ -93,6 +93,5 @@ We used a script\footnote{
 \url{https://github.com/GottfriedHerold/Chipmunk}%label removed -- Gotti, was causes errors due to multiple-defined label
 }
 to find concrete parameters that allow for instantiating Chipmunk based on a hard ring-SIS problem.
-We have used a fixed ring dimension $n = 512$.
-A selection of possible parameter choices is given in Table~\ref{tab:param}.
-
+We have used a fixed ring dimension $n = 512$ and a fixed error bound $\errorbound=2^{-15}$.
+For convenience a selection of possible parameter choices is given in Table~\ref{tab:param}.
