--- a/CCS-FINAL/main.tex
+++ b/CCS-FINAL/main.tex
@@ -28,7 +28,7 @@
 \fi
 \fi
 
-\usepackage{mdframed}
+%\usepackage{mdframed}
 \usepackage{nicefrac}
 \usepackage{csquotes}
 \usepackage{mathtools}
@@ -42,7 +42,7 @@
 \allowdisplaybreaks
 \makeatletter
 \makeatother
-\usepackage{tikz}
+%\usepackage{tikz}
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Section}
@@ -74,8 +74,6 @@
 \makeatletter
 \newcommand\footnoteref[1]{\protected@xdef\@thefnmark{\ref{#1}}\@footnotemark}
 \makeatother
-
-\def\orcidID#1{\kern.08em\href{https://orcid.org/#1}{\protect\includegraphics[keepaspectratio,width=0.7em]{orcid}}}
 
 %% Load macros
 \input{commanddefs}
