--- a/CCS-FINAL/main.tex
+++ b/CCS-FINAL/main.tex
@@ -78,6 +78,14 @@
 %% Load macros
 \input{commanddefs}
 
+\copyrightyear{2023}
+\acmYear{2023}
+\setcopyright{acmlicensed}\acmConference[CCS '23]{Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security}{November 26--30, 2023}{Copenhagen, Denmark}
+\acmBooktitle{Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security (CCS '23), November 26--30, 2023, Copenhagen, Denmark}
+\acmPrice{15.00}
+\acmDOI{10.1145/3576915.3623219}
+\acmISBN{979-8-4007-0050-7/23/11}
+
 \title{Chipmunk: Better Synchronized Multi-Signatures from Lattices}
 
 \author{Nils Fleischhacker}
