All my proofs are gone

--- a/CCS-FINAL/sections/appconstraints.tex
+++ b/CCS-FINAL/sections/appconstraints.tex
@@ -43,7 +43,7 @@
 \bgroup
 \setlength{\tabcolsep}{0.5em}
 \renewcommand{\arraystretch}{1.05}
-\begin{table*}[h!]\centering
+\begin{table*}\centering
     \begin{tabular}{ccr|cc|cccrr|crr|c}%\hline
   
       \multicolumn{3}{c|}{Parameter Sets}
@@ -85,7 +85,7 @@
       &    26 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,392 &   270,337 & 229 \\%\cline{3-13}
       &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,554 & 1,492,993 & 271 \\\bottomrule
     \end{tabular}
-    \caption{Parameter sets for Chipmunk for a fixed ring dimension $n=512$.}\label{tab:param}
+    \caption{Parameter sets for Chipmunk for a fixed ring dimension $n=512$ and fixed error bound $\errorbound=2^{-15}$.}\label{tab:param}
   \end{table*}
 \egroup
 
