--- a/extraref.bib
+++ b/extraref.bib
@@ -122,7 +122,15 @@
   year         = {1986},
   url          = {https://doi.org/10.1007/BF02579403},
   doi          = {10.1007/BF02579403},
-  timestamp    = {Wed, 22 Jul 2020 22:02:57 +0200},
-  biburl       = {https://dblp.org/rec/journals/combinatorica/Babai86.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{fullversion,
+  author       = "Nils Fleischhacker and
+                  Gottfried Herold and
+                  Mark Simkin and
+                  Zhenfei Zhang",
+  year         = 2023,
+  title        = "Chipmunk: Better Synchronized Multi-Signatures from Lattices",
+  howpublished = "Cryptology ePrint Archive",
+  note =         "\url{https://eprint.iacr.org/}",
 }
