--- a/CCS-FINAL/sections/multisig.tex
+++ b/CCS-FINAL/sections/multisig.tex
@@ -161,10 +161,13 @@ Let $\hots$ be a key homomorphic one-time signature scheme with public keys in $
 
 If $\hots$ is individually correct, $(\rho,W,\errorbound)$-probabilistically homomorphic, robustly homomorphic, and $W'$-multi-user existentially unforgeable under rerandomized keys and $\hvc$ is individually correct, $(\rho,W,\errorbound)$-probabilistically homomorphic, robustly homomorphic, and position-binding, then the construction from \autoref{fig:nidvconst} is an unforgeable synchronized $\rho$-wise multi-signature scheme that is individually correct and has correct aggregations in the presence of rogue keys and signatures.
 \end{theorem}
+Due to space constraints the proof of \autoref{thm:mainconstruction} is ommitted.
+The proof follows the same ideas as the proof in \cite{CCS:FleSimZha22}, except that we also need to show that aggregation succeeds with high probability.
+The proof can be found in the full version~\cite{fullversion} of this work.
 
-\begin{proof}
-  The theorem follows immediately from \autoref{lem:msigindcorrect}, \ref{lem:msigaggcorrect}, \ref{lem:msigunf} below.
-\end{proof}
+%\begin{proof}
+%  The theorem follows immediately from \autoref{lem:msigindcorrect}, \ref{lem:msigaggcorrect}, \ref{lem:msigunf} below.
+%\end{proof}
 
 Our concrete proposal is to use \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and $\otschip$ to thereby construct the Chipmunk synchronized multi-signature.
 \begin{definition}[Chipmunk synchronized multi-signatures]\label{def:actual_chipmunk}
@@ -175,91 +178,91 @@ As a corollary of \autoref{thm:mainconstruction}, we obtain that $\msigchip$ is 
 provided \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and $\otschip$ satisfy the appropriate security properties. The latter are guaranteed by \cameraready{\autoref{theo:veccom}}\eprint{\autoref{thm:encodedhvcworks}} and \autoref{theo:kots}, provided we set parameters appropriately and the appropriate Ring-SIS problems are hard.
 We collect the neccessary conditions in \autoref{tab:constraints}. Note that $W$ from \autoref{thm:mainconstruction} corresponds to $W = \tern_{\alpha_w}$.
 
-\bigskip\noindent
-We now proceed to show \autoref{lem:msigindcorrect}, \autoref{lem:msigaggcorrect} and \autoref{lem:msigunf} to actually prove \autoref{thm:mainconstruction}.
-\begin{lemma}\label{lem:msigindcorrect}
-Let $\secpar,n,q',\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q'$ being prime.
-Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
-Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
+%\bigskip\noindent
+%We now proceed to show \autoref{lem:msigindcorrect}, \autoref{lem:msigaggcorrect} and \autoref{lem:msigunf} to actually prove \autoref{thm:mainconstruction}.
+%\begin{lemma}\label{lem:msigindcorrect}
+%Let $\secpar,n,q',\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q'$ being prime.
+%Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
+%Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
 
-If both $\hots$ and $\hvc$ are individually correct, then the construction from \autoref{fig:nidvconst} is individually correct.
-\end{lemma}
-\begin{proof}
-  Let $\params=(\hotsparams,\hvcparams)\gets\setup(\secparam)$, $(\sk,\pk) = ((\osks,\opks),\vec{c})\gets\kgen(\params)$, $1\leq t\leq 2^\tau$,$m\in\bin^*$, and $\sigma = (\otsig,\vec{d}) \gets \sign(\params,\sk,t,m)$.
-  By definition of the signing algorithm it holds that
-  \[
-    \otsig \gets \hots.\sign(\hotsparams,\osk^t,m)
-  \]
-  and 
-  \[
-   \vec{d} \gets \hvc.\open(\hvcparams,\vec{c},\opks,t)
-  \]
-  By definition of the key generation algorithm it further holds that
-  \[
-    (\osk^t,\opk^t) \gets \hots.\kgen(\hotsparams)\enspace.
-  \]
-  From the individual correctness of $\hvc$ and the definition of the individual verification algorithm it follows that
-  \[
-    \opk^t = \opk \gets \hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d})\enspace,
-  \]
-  which finally implies by the individual correctness of $\hots$ that
-  \[
-    \hots.\sverify(\params_\hots,\opk,m,\otsig) = 1\enspace.
-  \]
-  Individual correctness thus follows.
-\end{proof}
+%If both $\hots$ and $\hvc$ are individually correct, then the construction from \autoref{fig:nidvconst} is individually correct.
+%\end{lemma}
+%\begin{proof}
+%  Let $\params=(\hotsparams,\hvcparams)\gets\setup(\secparam)$, $(\sk,\pk) = ((\osks,\opks),\vec{c})\gets\kgen(\params)$, $1\leq t\leq 2^\tau$,$m\in\bin^*$, and $\sigma = (\otsig,\vec{d}) \gets \sign(\params,\sk,t,m)$.
+%  By definition of the signing algorithm it holds that
+%  \[
+%    \otsig \gets \hots.\sign(\hotsparams,\osk^t,m)
+%  \]
+%  and 
+%  \[
+%   \vec{d} \gets \hvc.\open(\hvcparams,\vec{c},\opks,t)
+%  \]
+%  By definition of the key generation algorithm it further holds that
+%  \[
+%    (\osk^t,\opk^t) \gets \hots.\kgen(\hotsparams)\enspace.
+%  \]
+%  From the individual correctness of $\hvc$ and the definition of the individual verification algorithm it follows that
+%  \[
+%    \opk^t = \opk \gets \hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d})\enspace,
+%  \]
+%  which finally implies by the individual correctness of $\hots$ that
+%  \[
+%    \hots.\sverify(\params_\hots,\opk,m,\otsig) = 1\enspace.
+%  \]
+%  Individual correctness thus follows.
+%\end{proof}
 
-\begin{lemma}\label{lem:msigaggcorrect}
-Let $\secpar,n,q',\xi,\chi,\rho,\tau$ be positive integers and $0 < \errorbound < \tfrac{1}{2}$ with $n$ being a power of two, $q'$ being prime and $\chi \geq \secpar/\log(\tfrac{1}{2\errorbound})$.
-Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
-Let $W \subseteq \ring$ be a set and let $W' \coloneqq \{w^0-w^1| w^0,w^1 \in W\}$.
-Let $H\colon\, \bin^* \to W^\rho$ be a random oracle.
-Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
+%\begin{lemma}\label{lem:msigaggcorrect}
+%Let $\secpar,n,q',\xi,\chi,\rho,\tau$ be positive integers and $0 < \errorbound < \tfrac{1}{2}$ with $n$ being a power of two, $q'$ being prime and $\chi \geq \secpar/\log(\tfrac{1}{2\errorbound})$.
+%Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
+%Let $W \subseteq \ring$ be a set and let $W' \coloneqq \{w^0-w^1| w^0,w^1 \in W\}$.
+%Let $H\colon\, \bin^* \to W^\rho$ be a random oracle.
+%Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
 
-If both $\hots$ and $\hvc$ are $(\rho,W,\errorbound)$-probabilistically homomorphic, then the construction from \autoref{fig:nidvconst} has correct aggregations in the presence of rogue keys and signatures.
-\end{lemma}
-\begin{proof}
-  Let $\params = (\params_\hvc,\params_\hots)\gets\setup(\secparam)$, $\ell \in [\rho]$, $1\leq t\leq 2^\tau$, $m\in\bin^*$, $\pubkeys = (\vec{c}^1,\dots,\vec{c}^\ell)$, and $\signatures = (\sigma^1,\dots,\sigma^\ell)$ with 
-  $\sigma^i=(\otsig,\vec{d})$, be arbitrary, such that for all $i\in[\ell]$, $\iverify(\params,\vec{c}^i,t,m,\sigma^i)$.
-  
-  The aggregation algorithm makes up to $\chi$ attempts to aggregate the signature and will only output an \emph{invalid} signature, if all $\chi$ attempts fail.
-  It thus suffices to analyse the probability with which all attempts fail.
-  
-  Attempt $j$ is performed by computing weights $(w^1,\dots,w^\ell) \coloneqq H(t,m,\pubkeys,j)$ and computing 
-  \[
-    \otsig \coloneqq \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \otsig_i \quad \text{and}\quad \vec{d} \coloneqq \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \vec{d}_i\enspace.
-  \]
-  Let $\vec{c} = \sum_{i\in[\ell]}w^i\cdot\vec{c}^i$.
-  Since the signatures individually verify, there exists a well-defined $\opk^i \coloneqq \hvc.\iverify(\params,\vec{c}^i,t,\vec{d}^i)$ for all $i\in[\ell]$.
-  Since further $H$ is a random oracle we can apply the $(\rho,W,\errorbound)$-probabilistic homomorphism of both $\hvc$ of $\hots$ to conclude that
-  \[
-    \Pr\Bigl[\hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d}) \neq \sum_{i\in[\ell]} w^i\cdot\opk^i\Bigr] \leq \errorbound \enspace.
-  \]
-  and
-  \[
-    \Pr\Bigl[\hots.\sverify\Bigl(\params_\hots,\sum_{i\in[\ell]} w^i\cdot\opk^i, m, \otsig\Bigr) = 0\Bigr] \leq \errorbound\enspace.
-  \]
-  The aggregation attempt fails if either of these conditions is violated.
-  Therefore, by a union bound, each individual attempt fails with probability at most $2\errorbound$.
-  Since each attempt is an independent Bernoulli trial the probability of overall failure of all $\chi\geq \secpar/\log_2(\tfrac{1}{2\errorbound})$ attempts can be bounded by $(2\errorbound)^{\chi} \leq 2^{-\secpar}$.
-  Hence, aggregation will succeed with overwhelming probability.
-\end{proof}
+%If both $\hots$ and $\hvc$ are $(\rho,W,\errorbound)$-probabilistically homomorphic, then the construction from \autoref{fig:nidvconst} has correct aggregations in the presence of rogue keys and signatures.
+%\end{lemma}
+%\begin{proof}
+%  Let $\params = (\params_\hvc,\params_\hots)\gets\setup(\secparam)$, $\ell \in [\rho]$, $1\leq t\leq 2^\tau$, $m\in\bin^*$, $\pubkeys = (\vec{c}^1,\dots,\vec{c}^\ell)$, and $\signatures = (\sigma^1,\dots,\sigma^\ell)$ with 
+%  $\sigma^i=(\otsig,\vec{d})$, be arbitrary, such that for all $i\in[\ell]$, $\iverify(\params,\vec{c}^i,t,m,\sigma^i)$.
+%  
+%  The aggregation algorithm makes up to $\chi$ attempts to aggregate the signature and will only output an \emph{invalid} signature, if all $\chi$ attempts fail.
+%  It thus suffices to analyse the probability with which all attempts fail.
+%  
+%  Attempt $j$ is performed by computing weights $(w^1,\dots,w^\ell) \coloneqq H(t,m,\pubkeys,j)$ and computing 
+%  \[
+%    \otsig \coloneqq \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \otsig_i \quad \text{and}\quad \vec{d} \coloneqq \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \vec{d}_i\enspace.
+%  \]
+%  Let $\vec{c} = \sum_{i\in[\ell]}w^i\cdot\vec{c}^i$.
+%  Since the signatures individually verify, there exists a well-defined $\opk^i \coloneqq \hvc.\iverify(\params,\vec{c}^i,t,\vec{d}^i)$ for all $i\in[\ell]$.
+%  Since further $H$ is a random oracle we can apply the $(\rho,W,\errorbound)$-probabilistic homomorphism of both $\hvc$ of $\hots$ to conclude that
+%  \[
+%    \Pr\Bigl[\hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d}) \neq \sum_{i\in[\ell]} w^i\cdot\opk^i\Bigr] \leq \errorbound \enspace.
+%  \]
+%  and
+%  \[
+%    \Pr\Bigl[\hots.\sverify\Bigl(\params_\hots,\sum_{i\in[\ell]} w^i\cdot\opk^i, m, \otsig\Bigr) = 0\Bigr] \leq \errorbound\enspace.
+%  \]
+%  The aggregation attempt fails if either of these conditions is violated.
+%  Therefore, by a union bound, each individual attempt fails with probability at most $2\errorbound$.
+%  Since each attempt is an independent Bernoulli trial the probability of overall failure of all $\chi\geq \secpar/\log_2(\tfrac{1}{2\errorbound})$ attempts can be bounded by $(2\errorbound)^{\chi} \leq 2^{-\secpar}$.
+%  Hence, aggregation will succeed with overwhelming probability.
+%\end{proof}
 
-\begin{lemma}\label{lem:msigunf}
-Let $\secpar,n,q',\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q'$ being prime.
-Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
-Let $W \subseteq \ring$ be a set such that $\abs{W} > 2^\secpar$ and let $W' \coloneqq \{w^0-w^1| w^0,w^1 \in W\}$.
-Let $H\colon\, \bin^* \to W^\rho$ be a random oracle.
-Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
+%\begin{lemma}\label{lem:msigunf}
+%Let $\secpar,n,q',\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q'$ being prime.
+%Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
+%Let $W \subseteq \ring$ be a set such that $\abs{W} > 2^\secpar$ and let $W' \coloneqq \{w^0-w^1| w^0,w^1 \in W\}$.
+%Let $H\colon\, \bin^* \to W^\rho$ be a random oracle.
+%Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
 
-If $\hots$ is $W'$-multi-user existentially unforgeable under rerandomized keys and $\hvc$ is position-binding, then the construction from \autoref{fig:nidvconst} is unforgeable.
-\end{lemma}
+%If $\hots$ is $W'$-multi-user existentially unforgeable under rerandomized keys and $\hvc$ is position-binding, then the construction from \autoref{fig:nidvconst} is unforgeable.
+%\end{lemma}
 
-\begin{proof}
-  The proof for this lemma remains essentially identical to the proof of unforgeability for Squirrel~\cite{CCS:FleSimZha22}.
-  The entire argument is only concerned with the \emph{aggregated verification} algorithm, the unforgeability of $\hots$ and the position binding of $\hvc$.
-  None of the differences between Chipmunk and Squirrel affect these parts, with the tiny exception that the random oracle during verification now takes the additional input $j$.
-  Literally, the only necessary change in the proof is, therefore, that during the technically tedious forking lemma setup, the simulated random oracle needs to also take $j\in[\chi]$ as input.
-  As such, we omit the proof here and refer the interested reader to the full version of the original Squirrel paper~\cite{EPRINT:FleSimZha22}.
-  We stress that the proof of unforgeability in \cite{EPRINT:FleSimZha22} relies on a variant \cite{CCS:BelNev06} of the forking lemma \cite{EC:PoiSte96}, which uses a rewinding strategy that does not apply to quantum algorithms.
-\end{proof}
+%\begin{proof}
+%  The proof for this lemma remains essentially identical to the proof of unforgeability for Squirrel~\cite{CCS:FleSimZha22}.
+%  The entire argument is only concerned with the \emph{aggregated verification} algorithm, the unforgeability of $\hots$ and the position binding of $\hvc$.
+%  None of the differences between Chipmunk and Squirrel affect these parts, with the tiny exception that the random oracle during verification now takes the additional input $j$.
+%  Literally, the only necessary change in the proof is, therefore, that during the technically tedious forking lemma setup, the simulated random oracle needs to also take $j\in[\chi]$ as input.
+%  As such, we omit the proof here and refer the interested reader to the full version of the original Squirrel paper~\cite{EPRINT:FleSimZha22}.
+%  We stress that the proof of unforgeability in \cite{EPRINT:FleSimZha22} relies on a variant \cite{CCS:BelNev06} of the forking lemma \cite{EC:PoiSte96}, which uses a rewinding strategy that does not apply to quantum algorithms.
+%\end{proof}
