--- a/CCS-FINAL/main.tex
+++ b/CCS-FINAL/main.tex
@@ -174,7 +174,7 @@ We provide a full implementation of Chipmunk and provide extensive benchmarks st
 
 %% Bibliography
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{../cryptobib/abbrev0,../cryptobib/crypto,../extraref}
+\bibliography{bibexport}
 %\newpage
 %\begin{appendix}
 %\end{appendix}
